@@ -8,18 +8,18 @@
 
 package org.elasticsearch.ingest.common;
 
-import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.dissect.DissectException;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.Processor;
 import org.elasticsearch.ingest.RandomDocumentPicks;
 import org.elasticsearch.test.ESTestCase;
-import org.hamcrest.CoreMatchers;
 
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.Map;
 
 import static org.elasticsearch.ingest.IngestDocumentMatcher.assertIngestDocument;
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 
 /**
@@ -29,8 +29,7 @@ import static org.hamcrest.Matchers.equalTo;
 public class DissectProcessorTests extends ESTestCase {
 
     public void testMatch() {
-        IngestDocument ingestDocument = new IngestDocument("_index", "_id", null, null, null,
-            Collections.singletonMap("message", "foo,bar,baz"));
+        IngestDocument ingestDocument = new IngestDocument("_index", "_id", 1, null, null, Map.of("message", "foo,bar,baz"));
         DissectProcessor dissectProcessor = new DissectProcessor("", null, "message", "%{a},%{b},%{c}", "", true);
         dissectProcessor.execute(ingestDocument);
         assertThat(ingestDocument.getFieldValue("a", String.class), equalTo("foo"));
@@ -39,11 +38,14 @@ public class DissectProcessorTests extends ESTestCase {
     }
 
     public void testMatchOverwrite() {
-        IngestDocument ingestDocument = new IngestDocument("_index", "_id", null, null, null,
-            MapBuilder.<String, Object>newMapBuilder()
-                .put("message", "foo,bar,baz")
-                .put("a", "willgetstompped")
-                .map());
+        IngestDocument ingestDocument = new IngestDocument(
+            "_index",
+            "_id",
+            1,
+            null,
+            null,
+            Map.of("message", "foo,bar,baz", "a", "willgetstompped")
+        );
         assertThat(ingestDocument.getFieldValue("a", String.class), equalTo("willgetstompped"));
         DissectProcessor dissectProcessor = new DissectProcessor("", null, "message", "%{a},%{b},%{c}", "", true);
         dissectProcessor.execute(ingestDocument);
@@ -53,10 +55,22 @@ public class DissectProcessorTests extends ESTestCase {
     }
 
     public void testAdvancedMatch() {
-        IngestDocument ingestDocument = new IngestDocument("_index", "_id", null, null, null,
-            Collections.singletonMap("message", "foo       bar,,,,,,,baz nope:notagain 😊 🐇 🙃"));
-        DissectProcessor dissectProcessor =
-            new DissectProcessor("", null, "message", "%{a->} %{*b->},%{&b} %{}:%{?skipme} %{+smile/2} 🐇 %{+smile/1}", "::::", true);
+        IngestDocument ingestDocument = new IngestDocument(
+            "_index",
+            "_id",
+            1,
+            null,
+            null,
+            Map.of("message", "foo       bar,,,,,,,baz nope:notagain 😊 🐇 🙃")
+        );
+        DissectProcessor dissectProcessor = new DissectProcessor(
+            "",
+            null,
+            "message",
+            "%{a->} %{*b->},%{&b} %{}:%{?skipme} %{+smile/2} 🐇 %{+smile/1}",
+            "::::",
+            true
+        );
         dissectProcessor.execute(ingestDocument);
         assertThat(ingestDocument.getFieldValue("a", String.class), equalTo("foo"));
         assertThat(ingestDocument.getFieldValue("bar", String.class), equalTo("baz"));
@@ -66,11 +80,10 @@ public class DissectProcessorTests extends ESTestCase {
     }
 
     public void testMiss() {
-        IngestDocument ingestDocument = new IngestDocument("_index", "_id", null, null, null,
-            Collections.singletonMap("message", "foo:bar,baz"));
+        IngestDocument ingestDocument = new IngestDocument("_index", "_id", 1, null, null, Map.of("message", "foo:bar,baz"));
         DissectProcessor dissectProcessor = new DissectProcessor("", null, "message", "%{a},%{b},%{c}", "", true);
         DissectException e = expectThrows(DissectException.class, () -> dissectProcessor.execute(ingestDocument));
-        assertThat(e.getMessage(), CoreMatchers.containsString("Unable to find match for dissect pattern"));
+        assertThat(e.getMessage(), containsString("Unable to find match for dissect pattern"));
     }
 
     public void testNonStringValueWithIgnoreMissing() {
@@ -85,8 +98,10 @@ public class DissectProcessorTests extends ESTestCase {
     public void testNullValueWithIgnoreMissing() throws Exception {
         String fieldName = RandomDocumentPicks.randomFieldName(random());
         Processor processor = new DissectProcessor("", null, fieldName, "%{a},%{b},%{c}", "", true);
-        IngestDocument originalIngestDocument = RandomDocumentPicks
-            .randomIngestDocument(random(), Collections.singletonMap(fieldName, null));
+        IngestDocument originalIngestDocument = RandomDocumentPicks.randomIngestDocument(
+            random(),
+            Collections.singletonMap(fieldName, null)
+        );
         IngestDocument ingestDocument = new IngestDocument(originalIngestDocument);
         processor.execute(ingestDocument);
         assertIngestDocument(originalIngestDocument, ingestDocument);
@@ -95,8 +110,10 @@ public class DissectProcessorTests extends ESTestCase {
     public void testNullValueWithOutIgnoreMissing() {
         String fieldName = RandomDocumentPicks.randomFieldName(random());
         Processor processor = new DissectProcessor("", null, fieldName, "%{a},%{b},%{c}", "", false);
-        IngestDocument originalIngestDocument = RandomDocumentPicks
-            .randomIngestDocument(random(), Collections.singletonMap(fieldName, null));
+        IngestDocument originalIngestDocument = RandomDocumentPicks.randomIngestDocument(
+            random(),
+            Collections.singletonMap(fieldName, null)
+        );
         IngestDocument ingestDocument = new IngestDocument(originalIngestDocument);
         expectThrows(IllegalArgumentException.class, () -> processor.execute(ingestDocument));
     }
