@@ -15,10 +15,10 @@ import org.elasticsearch.ingest.common.SortProcessor.SortOrder;
 import org.elasticsearch.test.ESTestCase;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -51,9 +51,9 @@ public class SortProcessorTests extends ESTestCase {
     public void testSortIntegersNonRandom() throws Exception {
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random());
 
-        Integer[] expectedResult = new Integer[]{1,2,3,4,5,10,20,21,22,50,100};
+        Integer[] expectedResult = new Integer[] { 1, 2, 3, 4, 5, 10, 20, 21, 22, 50, 100 };
         List<Integer> fieldValue = new ArrayList<>(expectedResult.length);
-        fieldValue.addAll(Arrays.asList(expectedResult).subList(0, expectedResult.length));
+        fieldValue.addAll(List.of(expectedResult).subList(0, expectedResult.length));
         Collections.shuffle(fieldValue, random());
 
         String fieldName = RandomDocumentPicks.addRandomField(random(), ingestDocument, fieldValue);
@@ -236,7 +236,7 @@ public class SortProcessorTests extends ESTestCase {
         Processor processor = new SortProcessor(randomAlphaOfLength(10), null, fieldName, order, fieldName);
         try {
             processor.execute(ingestDocument);
-        } catch(IllegalArgumentException e) {
+        } catch (IllegalArgumentException e) {
             assertThat(e.getMessage(), equalTo("field [" + fieldName + "] of type [java.lang.String] cannot be cast to [java.util.List]"));
         }
     }
@@ -248,7 +248,7 @@ public class SortProcessorTests extends ESTestCase {
         Processor processor = new SortProcessor(randomAlphaOfLength(10), null, fieldName, order, fieldName);
         try {
             processor.execute(ingestDocument);
-        } catch(IllegalArgumentException e) {
+        } catch (IllegalArgumentException e) {
             assertThat(e.getMessage(), containsString("not present as part of path [" + fieldName + "]"));
         }
     }
@@ -259,13 +259,13 @@ public class SortProcessorTests extends ESTestCase {
         Processor processor = new SortProcessor(randomAlphaOfLength(10), null, "field", order, "field");
         try {
             processor.execute(ingestDocument);
-        } catch(IllegalArgumentException e) {
+        } catch (IllegalArgumentException e) {
             assertThat(e.getMessage(), equalTo("field [field] is null, cannot sort."));
         }
     }
 
     public void testDescendingSortWithTargetField() throws Exception {
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.emptyMap());
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Map.of());
         int numItems = randomIntBetween(1, 10);
         List<String> fieldValue = new ArrayList<>(numItems);
         List<String> expectedResult = new ArrayList<>(numItems);
@@ -279,14 +279,13 @@ public class SortProcessorTests extends ESTestCase {
 
         String fieldName = RandomDocumentPicks.addRandomField(random(), ingestDocument, fieldValue);
         String targetFieldName = fieldName + "foo";
-        Processor processor = new SortProcessor(randomAlphaOfLength(10), null, fieldName,
-            SortOrder.DESCENDING, targetFieldName);
+        Processor processor = new SortProcessor(randomAlphaOfLength(10), null, fieldName, SortOrder.DESCENDING, targetFieldName);
         processor.execute(ingestDocument);
         assertEquals(ingestDocument.getFieldValue(targetFieldName, List.class), expectedResult);
     }
 
     public void testAscendingSortWithTargetField() throws Exception {
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.emptyMap());
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Map.of());
         int numItems = randomIntBetween(1, 10);
         List<String> fieldValue = new ArrayList<>(numItems);
         List<String> expectedResult = new ArrayList<>(numItems);
@@ -300,15 +299,14 @@ public class SortProcessorTests extends ESTestCase {
 
         String fieldName = RandomDocumentPicks.addRandomField(random(), ingestDocument, fieldValue);
         String targetFieldName = fieldName + "foo";
-        Processor processor = new SortProcessor(randomAlphaOfLength(10), null, fieldName,
-            SortOrder.ASCENDING, targetFieldName);
+        Processor processor = new SortProcessor(randomAlphaOfLength(10), null, fieldName, SortOrder.ASCENDING, targetFieldName);
         processor.execute(ingestDocument);
         assertEquals(ingestDocument.getFieldValue(targetFieldName, List.class), expectedResult);
     }
 
     public void testSortWithTargetFieldLeavesOriginalUntouched() throws Exception {
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.emptyMap());
-        List<Integer> fieldValue = Arrays.asList(1, 5, 4);
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Map.of());
+        List<Integer> fieldValue = List.of(1, 5, 4);
         List<Integer> expectedResult = new ArrayList<>(fieldValue);
         Collections.sort(expectedResult);
 
