@@ -17,11 +17,14 @@ import com.maxmind.geoip2.record.Continent;
 import com.maxmind.geoip2.record.Country;
 import com.maxmind.geoip2.record.Location;
 import com.maxmind.geoip2.record.Subdivision;
+
 import org.elasticsearch.ElasticsearchParseException;
-import org.elasticsearch.ResourceNotFoundException;
 import org.elasticsearch.common.CheckedSupplier;
+import org.elasticsearch.common.logging.DeprecationCategory;
+import org.elasticsearch.common.logging.DeprecationLogger;
 import org.elasticsearch.common.network.InetAddresses;
 import org.elasticsearch.common.network.NetworkAddress;
+import org.elasticsearch.core.Assertions;
 import org.elasticsearch.ingest.AbstractProcessor;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.Processor;
@@ -30,13 +33,13 @@ import java.io.IOException;
 import java.net.InetAddress;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Supplier;
 
 import static org.elasticsearch.ingest.ConfigurationUtils.newConfigurationException;
 import static org.elasticsearch.ingest.ConfigurationUtils.readBooleanProperty;
@@ -45,45 +48,58 @@ import static org.elasticsearch.ingest.ConfigurationUtils.readStringProperty;
 
 public final class GeoIpProcessor extends AbstractProcessor {
 
+    private static final DeprecationLogger DEPRECATION_LOGGER = DeprecationLogger.getLogger(GeoIpProcessor.class);
+    static final String DEFAULT_DATABASES_DEPRECATION_MESSAGE = "the [fallback_to_default_databases] has been deprecated, because "
+        + "Elasticsearch no longer includes the default Maxmind geoip databases. This setting will be removed in Elasticsearch 9.0";
+
     public static final String TYPE = "geoip";
     private static final String CITY_DB_SUFFIX = "-City";
     private static final String COUNTRY_DB_SUFFIX = "-Country";
     private static final String ASN_DB_SUFFIX = "-ASN";
 
     private final String field;
+    private final Supplier<Boolean> isValid;
     private final String targetField;
-    private final CheckedSupplier<DatabaseReaderLazyLoader, IOException> supplier;
+    private final CheckedSupplier<GeoIpDatabase, IOException> supplier;
     private final Set<Property> properties;
     private final boolean ignoreMissing;
     private final boolean firstOnly;
+    private final String databaseFile;
 
     /**
      * Construct a geo-IP processor.
-     *  @param tag           the processor tag
+     * @param tag           the processor tag
      * @param description   the processor description
      * @param field         the source field to geo-IP map
-     * @param supplier    a supplier of a geo-IP database reader; ideally this is lazily-loaded once on first use
+     * @param supplier      a supplier of a geo-IP database reader; ideally this is lazily-loaded once on first use
+     * @param isValid       a supplier that determines if the available database files are up-to-date and license compliant
      * @param targetField   the target field
      * @param properties    the properties; ideally this is lazily-loaded once on first use
      * @param ignoreMissing true if documents with a missing value for the field should be ignored
      * @param firstOnly     true if only first result should be returned in case of array
+     * @param databaseFile  the name of the database file being queried; used only for tagging documents if the database is unavailable
      */
     GeoIpProcessor(
         final String tag,
         final String description,
         final String field,
-        final CheckedSupplier<DatabaseReaderLazyLoader, IOException> supplier,
+        final CheckedSupplier<GeoIpDatabase, IOException> supplier,
+        final Supplier<Boolean> isValid,
         final String targetField,
         final Set<Property> properties,
         final boolean ignoreMissing,
-        final boolean firstOnly) {
+        final boolean firstOnly,
+        final String databaseFile
+    ) {
         super(tag, description);
         this.field = field;
+        this.isValid = isValid;
         this.targetField = targetField;
         this.supplier = supplier;
         this.properties = properties;
         this.ignoreMissing = ignoreMissing;
         this.firstOnly = firstOnly;
+        this.databaseFile = databaseFile;
     }
 
     boolean isIgnoreMissing() {
@@ -94,77 +110,79 @@ public final class GeoIpProcessor extends AbstractProcessor {
     public IngestDocument execute(IngestDocument ingestDocument) throws IOException {
         Object ip = ingestDocument.getFieldValue(field, Object.class, ignoreMissing);
 
-        if (ip == null && ignoreMissing) {
+        if (isValid.get() == false) {
+            ingestDocument.appendFieldValue("tags", "_geoip_expired_database", false);
+            return ingestDocument;
+        } else if (ip == null && ignoreMissing) {
             return ingestDocument;
         } else if (ip == null) {
             throw new IllegalArgumentException("field [" + field + "] is null, cannot extract geoip information.");
         }
 
-        if (ip instanceof String) {
-            Map<String, Object> geoData = getGeoData((String) ip);
-            if (geoData.isEmpty() == false) {
-                ingestDocument.setFieldValue(targetField, geoData);
+        GeoIpDatabase geoIpDatabase = this.supplier.get();
+        if (geoIpDatabase == null) {
+            if (ignoreMissing == false) {
+                tag(ingestDocument, databaseFile);
             }
-        } else if (ip instanceof List) {
-            boolean match = false;
-            List<Map<String, Object>> geoDataList = new ArrayList<>(((List) ip).size());
-            for (Object ipAddr : (List) ip) {
-                if (ipAddr instanceof String == false) {
-                    throw new IllegalArgumentException("array in field [" + field + "] should only contain strings");
-                }
-                Map<String, Object> geoData = getGeoData((String) ipAddr);
-                if (geoData.isEmpty()) {
-                    geoDataList.add(null);
-                    continue;
-                }
-                if (firstOnly) {
+            return ingestDocument;
+        }
+
+        try {
+            if (ip instanceof String ipString) {
+                Map<String, Object> geoData = getGeoData(geoIpDatabase, ipString);
+                if (geoData.isEmpty() == false) {
                     ingestDocument.setFieldValue(targetField, geoData);
-                    return ingestDocument;
                 }
-                match = true;
-                geoDataList.add(geoData);
+            } else if (ip instanceof List<?> ipList) {
+                boolean match = false;
+                List<Map<String, Object>> geoDataList = new ArrayList<>(ipList.size());
+                for (Object ipAddr : ipList) {
+                    if (ipAddr instanceof String == false) {
+                        throw new IllegalArgumentException("array in field [" + field + "] should only contain strings");
+                    }
+                    Map<String, Object> geoData = getGeoData(geoIpDatabase, (String) ipAddr);
+                    if (geoData.isEmpty()) {
+                        geoDataList.add(null);
+                        continue;
+                    }
+                    if (firstOnly) {
+                        ingestDocument.setFieldValue(targetField, geoData);
+                        return ingestDocument;
+                    }
+                    match = true;
+                    geoDataList.add(geoData);
+                }
+                if (match) {
+                    ingestDocument.setFieldValue(targetField, geoDataList);
+                }
+            } else {
+                throw new IllegalArgumentException("field [" + field + "] should contain only string or array of strings");
             }
-            if (match) {
-                ingestDocument.setFieldValue(targetField, geoDataList);
-            }
-        } else {
-            throw new IllegalArgumentException("field [" + field + "] should contain only string or array of strings");
+        } finally {
+            geoIpDatabase.release();
         }
         return ingestDocument;
     }
 
-    private Map<String, Object> getGeoData(String ip) throws IOException {
-        DatabaseReaderLazyLoader lazyLoader = this.supplier.get();
-        try {
-            final String databaseType = lazyLoader.getDatabaseType();
-            final InetAddress ipAddress = InetAddresses.forString(ip);
-            Map<String, Object> geoData;
-            if (databaseType.endsWith(CITY_DB_SUFFIX)) {
-                try {
-                    geoData = retrieveCityGeoData(lazyLoader, ipAddress);
-                } catch (AddressNotFoundRuntimeException e) {
-                    geoData = Collections.emptyMap();
-                }
-            } else if (databaseType.endsWith(COUNTRY_DB_SUFFIX)) {
-                try {
-                    geoData = retrieveCountryGeoData(lazyLoader, ipAddress);
-                } catch (AddressNotFoundRuntimeException e) {
-                    geoData = Collections.emptyMap();
-                }
-            } else if (databaseType.endsWith(ASN_DB_SUFFIX)) {
-                try {
-                    geoData = retrieveAsnGeoData(lazyLoader, ipAddress);
-                } catch (AddressNotFoundRuntimeException e) {
-                    geoData = Collections.emptyMap();
-                }
-            } else {
-                throw new ElasticsearchParseException("Unsupported database type [" + lazyLoader.getDatabaseType()
-                    + "]", new IllegalStateException());
-            }
-            return geoData;
-        } finally {
-            lazyLoader.postLookup();
+    private Map<String, Object> getGeoData(GeoIpDatabase geoIpDatabase, String ip) throws IOException {
+        final String databaseType = geoIpDatabase.getDatabaseType();
+        final InetAddress ipAddress = InetAddresses.forString(ip);
+        Map<String, Object> geoData;
+        if (databaseType.endsWith(CITY_DB_SUFFIX)) {
+            geoData = retrieveCityGeoData(geoIpDatabase, ipAddress);
+        } else if (databaseType.endsWith(COUNTRY_DB_SUFFIX)) {
+            geoData = retrieveCountryGeoData(geoIpDatabase, ipAddress);
+
+        } else if (databaseType.endsWith(ASN_DB_SUFFIX)) {
+            geoData = retrieveAsnGeoData(geoIpDatabase, ipAddress);
+
+        } else {
+            throw new ElasticsearchParseException(
+                "Unsupported database type [" + geoIpDatabase.getDatabaseType() + "]",
+                new IllegalStateException()
+            );
         }
+        return geoData;
     }
 
     @Override
@@ -188,8 +206,11 @@ public final class GeoIpProcessor extends AbstractProcessor {
         return properties;
     }
 
-    private Map<String, Object> retrieveCityGeoData(DatabaseReaderLazyLoader lazyLoader, InetAddress ipAddress) {
-        CityResponse response = lazyLoader.getCity(ipAddress);
+    private Map<String, Object> retrieveCityGeoData(GeoIpDatabase geoIpDatabase, InetAddress ipAddress) {
+        CityResponse response = geoIpDatabase.getCity(ipAddress);
+        if (response == null) {
+            return Map.of();
+        }
         Country country = response.getCountry();
         City city = response.getCity();
         Location location = response.getLocation();
@@ -199,28 +220,26 @@ public final class GeoIpProcessor extends AbstractProcessor {
         Map<String, Object> geoData = new HashMap<>();
         for (Property property : this.properties) {
             switch (property) {
-                case IP:
-                    geoData.put("ip", NetworkAddress.format(ipAddress));
-                    break;
-                case COUNTRY_ISO_CODE:
+                case IP -> geoData.put("ip", NetworkAddress.format(ipAddress));
+                case COUNTRY_ISO_CODE -> {
                     String countryIsoCode = country.getIsoCode();
                     if (countryIsoCode != null) {
                         geoData.put("country_iso_code", countryIsoCode);
                     }
-                    break;
-                case COUNTRY_NAME:
+                }
+                case COUNTRY_NAME -> {
                     String countryName = country.getName();
                     if (countryName != null) {
                         geoData.put("country_name", countryName);
                     }
-                    break;
-                case CONTINENT_NAME:
+                }
+                case CONTINENT_NAME -> {
                     String continentName = continent.getName();
                     if (continentName != null) {
                         geoData.put("continent_name", continentName);
                     }
-                    break;
-                case REGION_ISO_CODE:
+                }
+                case REGION_ISO_CODE -> {
                     // ISO 3166-2 code for country subdivisions.
                     // See iso.org/iso-3166-country-codes.html
                     String countryIso = country.getIsoCode();
@@ -229,26 +248,26 @@ public final class GeoIpProcessor extends AbstractProcessor {
                         String regionIsoCode = countryIso + "-" + subdivisionIso;
                         geoData.put("region_iso_code", regionIsoCode);
                     }
-                    break;
-                case REGION_NAME:
+                }
+                case REGION_NAME -> {
                     String subdivisionName = subdivision.getName();
                     if (subdivisionName != null) {
                         geoData.put("region_name", subdivisionName);
                     }
-                    break;
-                case CITY_NAME:
+                }
+                case CITY_NAME -> {
                     String cityName = city.getName();
                     if (cityName != null) {
                         geoData.put("city_name", cityName);
                     }
-                    break;
-                case TIMEZONE:
+                }
+                case TIMEZONE -> {
                     String locationTimeZone = location.getTimeZone();
                     if (locationTimeZone != null) {
                         geoData.put("timezone", locationTimeZone);
                     }
-                    break;
-                case LOCATION:
+                }
+                case LOCATION -> {
                     Double latitude = location.getLatitude();
                     Double longitude = location.getLongitude();
                     if (latitude != null && longitude != null) {
@@ -257,123 +276,177 @@ public final class GeoIpProcessor extends AbstractProcessor {
                         locationObject.put("lon", longitude);
                         geoData.put("location", locationObject);
                     }
-                    break;
+                }
             }
         }
         return geoData;
     }
 
-    private Map<String, Object> retrieveCountryGeoData(DatabaseReaderLazyLoader lazyLoader, InetAddress ipAddress) {
-        CountryResponse response = lazyLoader.getCountry(ipAddress);
+    private Map<String, Object> retrieveCountryGeoData(GeoIpDatabase geoIpDatabase, InetAddress ipAddress) {
+        CountryResponse response = geoIpDatabase.getCountry(ipAddress);
+        if (response == null) {
+            return Map.of();
+        }
         Country country = response.getCountry();
         Continent continent = response.getContinent();
 
         Map<String, Object> geoData = new HashMap<>();
         for (Property property : this.properties) {
             switch (property) {
-                case IP:
-                    geoData.put("ip", NetworkAddress.format(ipAddress));
-                    break;
-                case COUNTRY_ISO_CODE:
+                case IP -> geoData.put("ip", NetworkAddress.format(ipAddress));
+                case COUNTRY_ISO_CODE -> {
                     String countryIsoCode = country.getIsoCode();
                     if (countryIsoCode != null) {
                         geoData.put("country_iso_code", countryIsoCode);
                     }
-                    break;
-                case COUNTRY_NAME:
+                }
+                case COUNTRY_NAME -> {
                     String countryName = country.getName();
                     if (countryName != null) {
                         geoData.put("country_name", countryName);
                     }
-                    break;
-                case CONTINENT_NAME:
+                }
+                case CONTINENT_NAME -> {
                     String continentName = continent.getName();
                     if (continentName != null) {
                         geoData.put("continent_name", continentName);
                     }
-                    break;
+                }
             }
         }
         return geoData;
     }
 
-    private Map<String, Object> retrieveAsnGeoData(DatabaseReaderLazyLoader lazyLoader, InetAddress ipAddress) {
-        AsnResponse response = lazyLoader.getAsn(ipAddress);
-        Integer asn = response.getAutonomousSystemNumber();
+    private Map<String, Object> retrieveAsnGeoData(GeoIpDatabase geoIpDatabase, InetAddress ipAddress) {
+        AsnResponse response = geoIpDatabase.getAsn(ipAddress);
+        if (response == null) {
+            return Map.of();
+        }
+        Long asn = response.getAutonomousSystemNumber();
         String organization_name = response.getAutonomousSystemOrganization();
         Network network = response.getNetwork();
 
         Map<String, Object> geoData = new HashMap<>();
         for (Property property : this.properties) {
             switch (property) {
-                case IP:
-                    geoData.put("ip", NetworkAddress.format(ipAddress));
-                    break;
-                case ASN:
+                case IP -> geoData.put("ip", NetworkAddress.format(ipAddress));
+                case ASN -> {
                     if (asn != null) {
                         geoData.put("asn", asn);
                     }
-                    break;
-                case ORGANIZATION_NAME:
+                }
+                case ORGANIZATION_NAME -> {
                     if (organization_name != null) {
                         geoData.put("organization_name", organization_name);
                     }
-                    break;
-                case NETWORK:
+                }
+                case NETWORK -> {
                     if (network != null) {
                         geoData.put("network", network.toString());
                     }
-                    break;
+                }
             }
         }
         return geoData;
     }
 
-    public static final class Factory implements Processor.Factory {
-        static final Set<Property> DEFAULT_CITY_PROPERTIES = Collections.unmodifiableSet(EnumSet.of(
-            Property.CONTINENT_NAME, Property.COUNTRY_NAME, Property.COUNTRY_ISO_CODE, Property.REGION_ISO_CODE,
-            Property.REGION_NAME, Property.CITY_NAME, Property.LOCATION
-        ));
-        static final Set<Property> DEFAULT_COUNTRY_PROPERTIES = Collections.unmodifiableSet(EnumSet.of(
-            Property.CONTINENT_NAME, Property.COUNTRY_NAME, Property.COUNTRY_ISO_CODE
-        ));
-        static final Set<Property> DEFAULT_ASN_PROPERTIES = Collections.unmodifiableSet(EnumSet.of(
-            Property.IP, Property.ASN, Property.ORGANIZATION_NAME, Property.NETWORK
-        ));
+    /**
+     * Retrieves and verifies a {@link GeoIpDatabase} instance for each execution of the {@link GeoIpProcessor}. Guards against missing
+     * custom databases, and ensures that database instances are of the proper type before use.
+     */
+    public static final class DatabaseVerifyingSupplier implements CheckedSupplier<GeoIpDatabase, IOException> {
+        private final GeoIpDatabaseProvider geoIpDatabaseProvider;
+        private final String databaseFile;
+        private final String databaseType;
 
-        private final DatabaseRegistry databaseRegistry;
-
-        List<DatabaseReaderLazyLoader> getAllDatabases() {
-            return databaseRegistry.getAllDatabases();
-        }
-
-        public Factory(DatabaseRegistry databaseRegistry) {
-            this.databaseRegistry = databaseRegistry;
+        public DatabaseVerifyingSupplier(GeoIpDatabaseProvider geoIpDatabaseProvider, String databaseFile, String databaseType) {
+            this.geoIpDatabaseProvider = geoIpDatabaseProvider;
+            this.databaseFile = databaseFile;
+            this.databaseType = databaseType;
         }
 
         @Override
-        public GeoIpProcessor create(
-                final Map<String, Processor.Factory> registry,
-                final String processorTag,
-                final String description, final Map<String, Object> config) throws IOException {
+        public GeoIpDatabase get() throws IOException {
+            GeoIpDatabase loader = geoIpDatabaseProvider.getDatabase(databaseFile);
+            if (loader == null) {
+                return null;
+            }
+
+            if (Assertions.ENABLED) {
+                // Only check whether the suffix has changed and not the entire database type.
+                // To sanity check whether a city db isn't overwriting with a country or asn db.
+                // For example overwriting a geoip lite city db with geoip city db is a valid change, but the db type is slightly different,
+                // by checking just the suffix this assertion doesn't fail.
+                String expectedSuffix = databaseType.substring(databaseType.lastIndexOf('-'));
+                assert loader.getDatabaseType().endsWith(expectedSuffix)
+                    : "database type [" + loader.getDatabaseType() + "] doesn't match with expected suffix [" + expectedSuffix + "]";
+            }
+            return loader;
+        }
+    }
+
+    public static final class Factory implements Processor.Factory {
+        static final Set<Property> DEFAULT_CITY_PROPERTIES = Set.copyOf(
+            EnumSet.of(
+                Property.CONTINENT_NAME,
+                Property.COUNTRY_NAME,
+                Property.COUNTRY_ISO_CODE,
+                Property.REGION_ISO_CODE,
+                Property.REGION_NAME,
+                Property.CITY_NAME,
+                Property.LOCATION
+            )
+        );
+        static final Set<Property> DEFAULT_COUNTRY_PROPERTIES = Set.copyOf(
+            EnumSet.of(Property.CONTINENT_NAME, Property.COUNTRY_NAME, Property.COUNTRY_ISO_CODE)
+        );
+        static final Set<Property> DEFAULT_ASN_PROPERTIES = Set.copyOf(
+            EnumSet.of(Property.IP, Property.ASN, Property.ORGANIZATION_NAME, Property.NETWORK)
+        );
+
+        private final GeoIpDatabaseProvider geoIpDatabaseProvider;
+
+        public Factory(GeoIpDatabaseProvider geoIpDatabaseProvider) {
+            this.geoIpDatabaseProvider = geoIpDatabaseProvider;
+        }
+
+        @Override
+        public Processor create(
+            final Map<String, Processor.Factory> registry,
+            final String processorTag,
+            final String description,
+            final Map<String, Object> config
+        ) throws IOException {
             String ipField = readStringProperty(TYPE, processorTag, config, "field");
             String targetField = readStringProperty(TYPE, processorTag, config, "target_field", "geoip");
             String databaseFile = readStringProperty(TYPE, processorTag, config, "database_file", "GeoLite2-City.mmdb");
             List<String> propertyNames = readOptionalList(TYPE, processorTag, config, "properties");
             boolean ignoreMissing = readBooleanProperty(TYPE, processorTag, config, "ignore_missing", false);
             boolean firstOnly = readBooleanProperty(TYPE, processorTag, config, "first_only", true);
-            boolean fallbackUsingDefaultDatabases = readBooleanProperty(TYPE, processorTag, config, "fallback_to_default_databases", true);
 
-            DatabaseReaderLazyLoader lazyLoader = databaseRegistry.getDatabase(databaseFile, fallbackUsingDefaultDatabases);
-            if (lazyLoader == null) {
-                throw newConfigurationException(TYPE, processorTag,
-                    "database_file", "database file [" + databaseFile + "] doesn't exist");
+            // Validating the download_database_on_pipeline_creation even if the result
+            // is not used directly by the factory.
+            downloadDatabaseOnPipelineCreation(config, processorTag);
+
+            // noop, should be removed in 9.0
+            Object value = config.remove("fallback_to_default_databases");
+            if (value != null) {
+                DEPRECATION_LOGGER.warn(DeprecationCategory.OTHER, "default_databases_message", DEFAULT_DATABASES_DEPRECATION_MESSAGE);
+            }
+
+            GeoIpDatabase geoIpDatabase = geoIpDatabaseProvider.getDatabase(databaseFile);
+            if (geoIpDatabase == null) {
+                // It's possible that the database could be downloaded via the GeoipDownloader process and could become available
+                // at a later moment, so a processor impl is returned that tags documents instead. If a database cannot be sourced then the
+                // processor will continue to tag documents with a warning until it is remediated by providing a database or changing the
+                // pipeline.
+                return new DatabaseUnavailableProcessor(processorTag, description, databaseFile);
             }
             final String databaseType;
             try {
-                databaseType = lazyLoader.getDatabaseType();
+                databaseType = geoIpDatabase.getDatabaseType();
             } finally {
-                lazyLoader.postLookup();
+                geoIpDatabase.release();
             }
 
             final Set<Property> properties;
@@ -386,7 +459,7 @@ public final class GeoIpProcessor extends AbstractProcessor {
                         throw newConfigurationException(TYPE, processorTag, "properties", e.getMessage());
                     }
                 }
-                properties = Collections.unmodifiableSet(modifiableProperties);
+                properties = Set.copyOf(modifiableProperties);
             } else {
                 if (databaseType.endsWith(CITY_DB_SUFFIX)) {
                     properties = DEFAULT_CITY_PROPERTIES;
@@ -395,37 +468,36 @@ public final class GeoIpProcessor extends AbstractProcessor {
                 } else if (databaseType.endsWith(ASN_DB_SUFFIX)) {
                     properties = DEFAULT_ASN_PROPERTIES;
                 } else {
-                    throw newConfigurationException(TYPE, processorTag, "database_file", "Unsupported database type ["
-                        + databaseType + "]");
+                    throw newConfigurationException(
+                        TYPE,
+                        processorTag,
+                        "database_file",
+                        "Unsupported database type [" + databaseType + "]"
+                    );
                 }
             }
-            CheckedSupplier<DatabaseReaderLazyLoader, IOException> supplier = () -> {
-                DatabaseReaderLazyLoader loader = databaseRegistry.getDatabase(databaseFile, fallbackUsingDefaultDatabases);
-                if (loader == null) {
-                    throw new ResourceNotFoundException("database file [" + databaseFile + "] doesn't exist");
-                }
-                // Only check whether the suffix has changed and not the entire database type.
-                // To sanity check whether a city db isn't overwriting with a country or asn db.
-                // For example overwriting a geoip lite city db with geoip city db is a valid change, but the db type is slightly different,
-                // by checking just the suffix this assertion doesn't fail.
-                String expectedSuffix = databaseType.substring(databaseType.lastIndexOf('-'));
-                assert loader.getDatabaseType().endsWith(expectedSuffix) : "database type [" + loader.getDatabaseType() +
-                    "] doesn't match with expected suffix [" + expectedSuffix + "]";
-                return loader;
-            };
-            return new GeoIpProcessor(processorTag, description, ipField, supplier, targetField, properties, ignoreMissing, firstOnly);
+            return new GeoIpProcessor(
+                processorTag,
+                description,
+                ipField,
+                new DatabaseVerifyingSupplier(geoIpDatabaseProvider, databaseFile, databaseType),
+                () -> geoIpDatabaseProvider.isValid(databaseFile),
+                targetField,
+                properties,
+                ignoreMissing,
+                firstOnly,
+                databaseFile
+            );
         }
-    }
 
-    // Geoip2's AddressNotFoundException is checked and due to the fact that we need run their code
-    // inside a PrivilegedAction code block, we are forced to catch any checked exception and rethrow
-    // it with an unchecked exception.
-    //package private for testing
-    static final class AddressNotFoundRuntimeException extends RuntimeException {
-
-        AddressNotFoundRuntimeException(Throwable cause) {
-            super(cause);
+        public static boolean downloadDatabaseOnPipelineCreation(Map<String, Object> config) {
+            return downloadDatabaseOnPipelineCreation(config, null);
         }
+
+        public static boolean downloadDatabaseOnPipelineCreation(Map<String, Object> config, String processorTag) {
+            return readBooleanProperty(GeoIpProcessor.TYPE, processorTag, config, "download_database_on_pipeline_creation", true);
+        }
+
     }
 
     enum Property {
@@ -444,15 +516,27 @@ public final class GeoIpProcessor extends AbstractProcessor {
         NETWORK;
 
         static final EnumSet<Property> ALL_CITY_PROPERTIES = EnumSet.of(
-            Property.IP, Property.COUNTRY_ISO_CODE, Property.COUNTRY_NAME, Property.CONTINENT_NAME,
-            Property.REGION_ISO_CODE, Property.REGION_NAME, Property.CITY_NAME, Property.TIMEZONE,
+            Property.IP,
+            Property.COUNTRY_ISO_CODE,
+            Property.COUNTRY_NAME,
+            Property.CONTINENT_NAME,
+            Property.REGION_ISO_CODE,
+            Property.REGION_NAME,
+            Property.CITY_NAME,
+            Property.TIMEZONE,
             Property.LOCATION
         );
         static final EnumSet<Property> ALL_COUNTRY_PROPERTIES = EnumSet.of(
-            Property.IP, Property.CONTINENT_NAME, Property.COUNTRY_NAME, Property.COUNTRY_ISO_CODE
+            Property.IP,
+            Property.CONTINENT_NAME,
+            Property.COUNTRY_NAME,
+            Property.COUNTRY_ISO_CODE
         );
         static final EnumSet<Property> ALL_ASN_PROPERTIES = EnumSet.of(
-            Property.IP, Property.ASN, Property.ORGANIZATION_NAME, Property.NETWORK
+            Property.IP,
+            Property.ASN,
+            Property.ORGANIZATION_NAME,
+            Property.NETWORK
         );
 
         public static Property parseProperty(String databaseType, String value) {
@@ -472,9 +556,39 @@ public final class GeoIpProcessor extends AbstractProcessor {
                 }
                 return property;
             } catch (IllegalArgumentException e) {
-                throw new IllegalArgumentException("illegal property value [" + value + "]. valid values are " +
-                    Arrays.toString(validProperties.toArray()));
+                throw new IllegalArgumentException(
+                    "illegal property value [" + value + "]. valid values are " + Arrays.toString(validProperties.toArray())
+                );
             }
         }
+    }
+
+    static class DatabaseUnavailableProcessor extends AbstractProcessor {
+
+        private final String databaseName;
+
+        DatabaseUnavailableProcessor(String tag, String description, String databaseName) {
+            super(tag, description);
+            this.databaseName = databaseName;
+        }
+
+        @Override
+        public IngestDocument execute(IngestDocument ingestDocument) throws Exception {
+            tag(ingestDocument, databaseName);
+            return ingestDocument;
+        }
+
+        @Override
+        public String getType() {
+            return TYPE;
+        }
+
+        public String getDatabaseName() {
+            return databaseName;
+        }
+    }
+
+    private static void tag(IngestDocument ingestDocument, String databaseName) {
+        ingestDocument.appendFieldValue("tags", "_geoip_database_unavailable_" + databaseName, true);
     }
 }
