@@ -8,6 +8,7 @@
 
 package org.elasticsearch.painless.symbol;
 
+import org.elasticsearch.painless.Def;
 import org.elasticsearch.painless.FunctionRef;
 import org.elasticsearch.painless.Operation;
 import org.elasticsearch.painless.ir.IRNode.IRCondition;
@@ -21,7 +22,6 @@ import org.elasticsearch.painless.lookup.PainlessLookupUtility;
 import org.elasticsearch.painless.lookup.PainlessMethod;
 import org.elasticsearch.painless.symbol.FunctionTable.LocalFunction;
 
-import java.util.Collections;
 import java.util.List;
 
 public class IRDecorations {
@@ -165,9 +165,9 @@ public class IRDecorations {
     }
 
     /** describes an encoding used to resolve references and lambdas at runtime */
-    public static class IRDDefReferenceEncoding extends IRDecoration<String> {
+    public static class IRDDefReferenceEncoding extends IRDecoration<Def.Encoding> {
 
-        public IRDDefReferenceEncoding(String value) {
+        public IRDDefReferenceEncoding(Def.Encoding value) {
             super(value);
         }
     }
@@ -285,7 +285,7 @@ public class IRDecorations {
 
         @Override
         public String toString() {
-            return PainlessLookupUtility.buildPainlessMethodKey(getValue().javaMethod.getName(), getValue().typeParameters.size());
+            return PainlessLookupUtility.buildPainlessMethodKey(getValue().javaMethod().getName(), getValue().typeParameters().size());
         }
     }
 
@@ -301,7 +301,7 @@ public class IRDecorations {
     public static class IRDTypeParameters extends IRDecoration<List<Class<?>>> {
 
         public IRDTypeParameters(List<Class<?>> value) {
-            super(Collections.unmodifiableList(value));
+            super(List.copyOf(value));
         }
     }
 
@@ -309,7 +309,7 @@ public class IRDecorations {
     public static class IRDParameterNames extends IRDecoration<List<String>> {
 
         public IRDParameterNames(List<String> value) {
-            super(Collections.unmodifiableList(value));
+            super(List.copyOf(value));
         }
     }
 
@@ -337,6 +337,14 @@ public class IRDecorations {
         }
     }
 
+    /** describes if a method needs to capture the script "this" */
+    public static class IRCInstanceCapture implements IRCondition {
+
+        private IRCInstanceCapture() {
+
+        }
+    }
+
     /** describes the maximum number of loop iterations possible in a method */
     public static class IRDMaxLoopCounter extends IRDecoration<Integer> {
 
@@ -358,6 +366,19 @@ public class IRDecorations {
 
         public IRDFunction(LocalFunction value) {
             super(value);
+        }
+    }
+
+    /** describes a method for a node on the script class; which method depends on node type */
+    public static class IRDThisMethod extends IRDecoration<PainlessMethod> {
+
+        public IRDThisMethod(PainlessMethod value) {
+            super(value);
+        }
+
+        @Override
+        public String toString() {
+            return PainlessLookupUtility.buildPainlessMethodKey(getValue().javaMethod().getName(), getValue().typeParameters().size());
         }
     }
 
@@ -429,8 +450,13 @@ public class IRDecorations {
     public static class IRDCaptureNames extends IRDecoration<List<String>> {
 
         public IRDCaptureNames(List<String> value) {
-            super(Collections.unmodifiableList(value));
+            super(List.copyOf(value));
         }
+    }
+
+    /** describes if the first capture of a method reference requires boxing */
+    public interface IRCCaptureBox extends IRCondition {
+
     }
 
     /** describes the type of value stored in an assignment operation */
