@@ -10,7 +10,6 @@ package org.elasticsearch.plugins;
 
 import org.elasticsearch.action.support.ActiveShardCount;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.routing.allocation.decider.EnableAllocationDecider;
@@ -23,7 +22,7 @@ import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.indices.IndicesService;
 import org.elasticsearch.test.ESIntegTestCase;
-import org.elasticsearch.test.InternalTestCluster;
+import org.elasticsearch.test.junit.annotations.TestLogging;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -36,7 +35,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.env.NodeEnvironment.INDICES_FOLDER;
 import static org.elasticsearch.gateway.MetadataStateFormat.STATE_DIR_NAME;
@@ -57,9 +55,9 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
     }
 
     @Override
-    protected Settings nodeSettings(int nodeOrdinal) {
+    protected Settings nodeSettings(int nodeOrdinal, Settings otherSettings) {
         return Settings.builder()
-            .put(super.nodeSettings(nodeOrdinal))
+            .put(super.nodeSettings(nodeOrdinal, otherSettings))
             // prevent shards to move around after they got assigned the first time
             .put(EnableAllocationDecider.CLUSTER_ROUTING_REBALANCE_ENABLE_SETTING.getKey(), EnableAllocationDecider.Rebalance.NONE)
             .build();
@@ -71,20 +69,19 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         ensureStableCluster(2 + 1, masterNode);
 
         final String indexName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        createIndex(indexName, Settings.builder()
-            .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 2)
-            .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-            .build());
+        createIndex(indexName, 2, 0);
 
         final NumShards numShards = getNumShards(indexName);
-        assertFalse(client().admin().cluster().prepareHealth()
-            .setIndices(indexName)
-            .setWaitForGreenStatus()
-            .setWaitForEvents(Priority.LANGUID)
-            .setWaitForNoRelocatingShards(true)
-            .setWaitForNoInitializingShards(true)
-            .get()
-            .isTimedOut());
+        assertFalse(
+            clusterAdmin().prepareHealth()
+                .setIndices(indexName)
+                .setWaitForGreenStatus()
+                .setWaitForEvents(Priority.LANGUID)
+                .setWaitForNoRelocatingShards(true)
+                .setWaitForNoInitializingShards(true)
+                .get()
+                .isTimedOut()
+        );
 
         final ClusterState clusterState = internalCluster().clusterService(masterNode).state();
         final Index index = clusterState.metadata().index(indexName).getIndex();
@@ -95,50 +92,63 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
             assertNoDeletions(shardsByNode.getKey());
         }
 
-        assertAcked(client().admin().indices().prepareDelete(indexName));
+        assertAcked(indicesAdmin().prepareDelete(indexName));
         assertPendingDeletesProcessed();
 
         assertBusy(() -> {
             for (Map.Entry<String, List<ShardRouting>> shardsByNode : shardsByNodes.entrySet()) {
                 final String nodeName = shardsByNode.getKey();
                 final IndexFoldersDeletionListenerPlugin plugin = plugin(nodeName);
-                assertTrue("Listener should have been notified of deletion of index " + index + " on node " + nodeName,
-                    plugin.deletedIndices.contains(index));
+                assertTrue(
+                    "Listener should have been notified of deletion of index " + index + " on node " + nodeName,
+                    plugin.deletedIndices.contains(index)
+                );
 
                 final List<ShardId> deletedShards = plugin.deletedShards.get(index);
                 assertThat(deletedShards, notNullValue());
-                assertFalse("Listener should have been notified of deletion of one or more shards on node " + nodeName,
-                    deletedShards.isEmpty());
+                assertFalse(
+                    "Listener should have been notified of deletion of one or more shards on node " + nodeName,
+                    deletedShards.isEmpty()
+                );
 
                 for (ShardRouting shardRouting : shardsByNode.getValue()) {
                     final ShardId shardId = shardRouting.shardId();
-                    assertTrue("Listener should have been notified of deletion of shard " + shardId + " on node " + nodeName,
-                        deletedShards.contains(shardId));
+                    assertTrue(
+                        "Listener should have been notified of deletion of shard " + shardId + " on node " + nodeName,
+                        deletedShards.contains(shardId)
+                    );
                 }
             }
         }, 30L, TimeUnit.SECONDS);
     }
 
+    @TestLogging(
+        reason = "Debug #93226",
+        value = "org.elasticsearch.indices.cluster.IndicesClusterStateService:DEBUG,"
+            + "org.elasticsearch.indices.IndicesService:DEBUG,"
+            + "org.elasticsearch.index.IndexService:DEBUG,"
+            + "org.elasticsearch.env.NodeEnvironment:DEBUG,"
+            + "org.elasticsearch.cluster.service.MasterService:TRACE"
+    )
     public void testListenersInvokedWhenIndexIsRelocated() throws Exception {
         final String masterNode = internalCluster().startMasterOnlyNode();
         internalCluster().startDataOnlyNodes(4);
         ensureStableCluster(4 + 1, masterNode);
 
         final String indexName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        createIndex(indexName, Settings.builder()
-            .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 4)
-            .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 1))
-            .build());
+        createIndex(indexName, 4, between(0, 1));
 
         final NumShards numShards = getNumShards(indexName);
-        assertFalse(client().admin().cluster().prepareHealth()
-            .setIndices(indexName)
-            .setWaitForGreenStatus()
-            .setWaitForEvents(Priority.LANGUID)
-            .setWaitForNoRelocatingShards(true)
-            .setWaitForNoInitializingShards(true)
-            .get()
-            .isTimedOut());
+        assertFalse(
+            clusterAdmin().prepareHealth()
+                .setIndices(indexName)
+                .setWaitForGreenStatus()
+                .setWaitForEvents(Priority.LANGUID)
+                .setWaitForNoRelocatingShards(true)
+                .setWaitForNoInitializingShards(true)
+                .get()
+                .isTimedOut()
+        );
 
         final ClusterState clusterState = internalCluster().clusterService(masterNode).state();
         final Index index = clusterState.metadata().index(indexName).getIndex();
@@ -150,10 +160,8 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         }
 
         final List<String> excludedNodes = randomSubsetOf(2, shardsByNodes.keySet());
-        assertAcked(client().admin().indices().prepareUpdateSettings(indexName)
-            .setSettings(Settings.builder()
-                .put("index.routing.allocation.exclude._name", String.join(",", excludedNodes))
-                .build()));
+        logger.info("--> excluding nodes {}", excludedNodes);
+        updateIndexSettings(Settings.builder().put("index.routing.allocation.exclude._name", String.join(",", excludedNodes)), indexName);
         ensureGreen(indexName);
 
         assertBusy(() -> {
@@ -162,18 +170,24 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
                 final IndexFoldersDeletionListenerPlugin plugin = plugin(nodeName);
 
                 if (excludedNodes.contains(nodeName)) {
-                    assertTrue("Listener should have been notified of deletion of index " + index + " on node " + nodeName,
-                        plugin.deletedIndices.contains(index));
+                    assertTrue(
+                        "Listener should have been notified of deletion of index " + index + " on node " + nodeName,
+                        plugin.deletedIndices.contains(index)
+                    );
 
                     final List<ShardId> deletedShards = plugin.deletedShards.get(index);
                     assertThat(deletedShards, notNullValue());
-                    assertFalse("Listener should have been notified of deletion of one or more shards on node " + nodeName,
-                        deletedShards.isEmpty());
+                    assertFalse(
+                        "Listener should have been notified of deletion of one or more shards on node " + nodeName,
+                        deletedShards.isEmpty()
+                    );
 
                     for (ShardRouting shardRouting : shardsByNode.getValue()) {
                         final ShardId shardId = shardRouting.shardId();
-                        assertTrue("Listener should have been notified of deletion of shard " + shardId + " on node " + nodeName,
-                            deletedShards.contains(shardId));
+                        assertTrue(
+                            "Listener should have been notified of deletion of shard " + shardId + " on node " + nodeName,
+                            deletedShards.contains(shardId)
+                        );
                     }
                 } else {
                     assertNoDeletions(nodeName);
@@ -188,20 +202,19 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         ensureStableCluster(4 + 1, masterNode);
 
         final String indexName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        createIndex(indexName, Settings.builder()
-            .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 4)
-            .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 1))
-            .build());
+        createIndex(indexName, 4, between(0, 1));
 
         final NumShards numShards = getNumShards(indexName);
-        assertFalse(client().admin().cluster().prepareHealth()
-            .setIndices(indexName)
-            .setWaitForGreenStatus()
-            .setWaitForEvents(Priority.LANGUID)
-            .setWaitForNoRelocatingShards(true)
-            .setWaitForNoInitializingShards(true)
-            .get()
-            .isTimedOut());
+        assertFalse(
+            clusterAdmin().prepareHealth()
+                .setIndices(indexName)
+                .setWaitForGreenStatus()
+                .setWaitForEvents(Priority.LANGUID)
+                .setWaitForNoRelocatingShards(true)
+                .setWaitForNoInitializingShards(true)
+                .get()
+                .isTimedOut()
+        );
 
         final ClusterState clusterState = internalCluster().clusterService(masterNode).state();
         final Index index = clusterState.metadata().index(indexName).getIndex();
@@ -214,10 +227,10 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
 
         final String stoppedNode = randomFrom(shardsByNodes.keySet());
         final Settings stoppedNodeDataPathSettings = internalCluster().dataPathSettings(stoppedNode);
-        internalCluster().stopRandomNode(InternalTestCluster.nameFilter(stoppedNode));
+        internalCluster().stopNode(stoppedNode);
         ensureStableCluster(3 + 1, masterNode);
 
-        assertAcked(client().admin().indices().prepareDelete(indexName));
+        assertAcked(indicesAdmin().prepareDelete(indexName));
 
         final String restartedNode = internalCluster().startNode(stoppedNodeDataPathSettings);
         ensureStableCluster(4 + 1, masterNode);
@@ -225,8 +238,10 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
 
         assertBusy(() -> {
             final IndexFoldersDeletionListenerPlugin plugin = plugin(restartedNode);
-            assertTrue("Listener should have been notified of deletion of index " + index + " on node " + restartedNode,
-                plugin.deletedIndices.contains(index));
+            assertTrue(
+                "Listener should have been notified of deletion of index " + index + " on node " + restartedNode,
+                plugin.deletedIndices.contains(index)
+            );
         }, 30L, TimeUnit.SECONDS);
     }
 
@@ -245,32 +260,26 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         logger.debug("--> creating [{}] leftover indices on data node [{}]", leftovers.length, dataNode);
         for (int i = 0; i < leftovers.length; i++) {
             final String indexName = "index-" + i;
-            createIndex(indexName, Settings.builder()
-                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
-                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                .put("index.routing.allocation.include._name", dataNode)
-                .build());
+            createIndex(indexName, indexSettings(1, 0).put("index.routing.allocation.include._name", dataNode).build());
             ensureGreen(indexName);
             leftovers[i] = internalCluster().clusterService(masterNode).state().metadata().index(indexName).getIndex();
         }
 
         logger.debug("--> stopping data node [{}], the data left on disk will be injected as left-overs in a newer data node", dataNode);
-        internalCluster().stopRandomNode(InternalTestCluster.nameFilter(dataNode));
+        internalCluster().stopNode(dataNode);
         ensureStableCluster(1, masterNode);
 
         logger.debug("--> deleting leftover indices");
-        assertAcked(client().admin().indices().prepareDelete("index-*"));
+        assertAcked(indicesAdmin().prepareDelete("index-*"));
 
         final String indexName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
 
         logger.debug("--> creating a new index [{}]", indexName);
-        assertAcked(client().admin().indices().prepareCreate(indexName).setSettings(
-            Settings.builder()
-                .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
-                .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 0)
-                .put("index.routing.allocation.enable", EnableAllocationDecider.Allocation.NONE)
-                .build())
-            .setWaitForActiveShards(ActiveShardCount.NONE));
+        assertAcked(
+            indicesAdmin().prepareCreate(indexName)
+                .setSettings(indexSettings(1, 0).put("index.routing.allocation.enable", EnableAllocationDecider.Allocation.NONE).build())
+                .setWaitForActiveShards(ActiveShardCount.NONE)
+        );
 
         final Index index = internalCluster().clusterService(masterNode).state().metadata().index(indexName).getIndex();
         logger.debug("--> index [{}] created", index);
@@ -289,25 +298,32 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
         logger.debug("--> starting another data node with data paths [{}]", dataPaths);
         dataNode = internalCluster().startDataOnlyNode(
             Settings.builder()
-                .putList(Environment.PATH_DATA_SETTING.getKey(),
-                    dataPaths.stream().map(p -> p.toAbsolutePath().toString()).collect(Collectors.toList()))
+                .putList(Environment.PATH_DATA_SETTING.getKey(), dataPaths.stream().map(p -> p.toAbsolutePath().toString()).toList())
                 .putNull(Environment.PATH_SHARED_DATA_SETTING.getKey())
-                .build());
+                .build()
+        );
         ensureStableCluster(1 + 1, masterNode);
 
         final IndexFoldersDeletionListenerPlugin plugin = plugin(dataNode);
         assertTrue("Expecting no shards deleted on node " + dataNode, plugin.deletedShards.isEmpty());
 
-        assertAcked(client().admin().indices().prepareUpdateSettings(indexName).setSettings(Settings.builder()
-            .put("index.routing.allocation.enable", EnableAllocationDecider.Allocation.ALL)
-            .put("index.routing.allocation.require._name", dataNode)
-        ));
+        updateIndexSettings(
+            Settings.builder()
+                .put("index.routing.allocation.enable", EnableAllocationDecider.Allocation.ALL)
+                .put("index.routing.allocation.require._name", dataNode),
+            indexName
+        );
         ensureGreen(indexName);
 
-        assertTrue("Listener should have been notified of deletion of left-over shards for index " + index + " on node " + dataNode,
-            plugin.deletedShards.containsKey(index));
-        assertThat("Listener should have been notified of [" + leftovers.length + "] deletions of left-over shard [0] on node " + dataNode,
-            plugin.deletedShards.get(index).size(), equalTo(leftovers.length));
+        assertTrue(
+            "Listener should have been notified of deletion of left-over shards for index " + index + " on node " + dataNode,
+            plugin.deletedShards.containsKey(index)
+        );
+        assertThat(
+            "Listener should have been notified of [" + leftovers.length + "] deletions of left-over shard [0] on node " + dataNode,
+            plugin.deletedShards.get(index).size(),
+            equalTo(leftovers.length)
+        );
     }
 
     private Map<String, List<ShardRouting>> shardRoutingsByNodes(ClusterState clusterState, Index index) {
@@ -361,9 +377,13 @@ public class IndexFoldersDeletionListenerIT extends ESIntegTestCase {
 
     private static void assertNoDeletions(String nodeName) {
         final IndexFoldersDeletionListenerPlugin plugin = plugin(nodeName);
-        assertTrue("Expecting no indices deleted on node [" + nodeName + "] but got: " + plugin.deletedIndices,
-            plugin.deletedIndices.isEmpty());
-        assertTrue("Expecting no shards deleted on node [" + nodeName + "] but got: " + plugin.deletedShards,
-            plugin.deletedShards.isEmpty());
+        assertTrue(
+            "Expecting no indices deleted on node [" + nodeName + "] but got: " + plugin.deletedIndices,
+            plugin.deletedIndices.isEmpty()
+        );
+        assertTrue(
+            "Expecting no shards deleted on node [" + nodeName + "] but got: " + plugin.deletedShards,
+            plugin.deletedShards.isEmpty()
+        );
     }
 }
