@@ -10,13 +10,12 @@ package org.elasticsearch.common.xcontent;
 
 import org.apache.lucene.search.spell.LevenshteinDistance;
 import org.apache.lucene.util.CollectionUtil;
-import org.elasticsearch.common.collect.Tuple;
+import org.elasticsearch.core.Tuple;
+import org.elasticsearch.xcontent.ErrorOnUnknown;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-
-import static java.util.stream.Collectors.toList;
 
 public class SuggestingErrorOnUnknown implements ErrorOnUnknown {
     @Override
@@ -54,7 +53,7 @@ public class SuggestingErrorOnUnknown implements ErrorOnUnknown {
             }
             return a.v2().compareTo(b.v2());
         });
-        List<String> keys = scored.stream().map(Tuple::v2).collect(toList());
+        List<String> keys = scored.stream().map(Tuple::v2).toList();
         StringBuilder builder = new StringBuilder(" did you mean ");
         if (keys.size() == 1) {
             builder.append("[").append(keys.get(0)).append("]");
