@@ -16,7 +16,7 @@ import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.action.support.WriteRequest.RefreshPolicy;
 import org.elasticsearch.action.support.WriteResponse;
 import org.elasticsearch.action.support.replication.ReplicationOperation.ReplicaResponse;
-import org.elasticsearch.client.transport.NoNodeAvailableException;
+import org.elasticsearch.client.internal.transport.NoNodeAvailableException;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.action.shard.ShardStateAction;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
@@ -27,12 +27,15 @@ import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.routing.TestShardRouting;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.io.stream.StreamInput;
-import org.elasticsearch.common.lease.Releasable;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.core.Releasable;
+import org.elasticsearch.core.Strings;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexService;
 import org.elasticsearch.index.IndexingPressure;
+import org.elasticsearch.index.engine.Engine;
 import org.elasticsearch.index.shard.IndexShard;
+import org.elasticsearch.index.shard.ReplicationGroup;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.index.shard.ShardNotFoundException;
 import org.elasticsearch.index.translog.Translog;
@@ -57,24 +60,23 @@ import org.mockito.ArgumentCaptor;
 import java.io.IOException;
 import java.util.Collections;
 import java.util.HashSet;
-import java.util.Locale;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
+import static org.elasticsearch.test.ActionListenerUtils.anyActionListener;
 import static org.elasticsearch.test.ClusterServiceUtils.createClusterService;
 import static org.hamcrest.Matchers.arrayWithSize;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.instanceOf;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyInt;
-import static org.mockito.Matchers.anyLong;
-import static org.mockito.Matchers.anyObject;
-import static org.mockito.Matchers.anyString;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
@@ -100,6 +102,10 @@ public class TransportWriteActionTests extends ESTestCase {
         indexShard = mock(IndexShard.class);
         location = mock(Translog.Location.class);
         clusterService = createClusterService(threadPool);
+        when(indexShard.refresh(any())).thenReturn(new Engine.RefreshResult(true, 1));
+        ReplicationGroup replicationGroup = mock(ReplicationGroup.class);
+        when(indexShard.getReplicationGroup()).thenReturn(replicationGroup);
+        when(replicationGroup.getReplicationTargets()).thenReturn(Collections.emptyList());
     }
 
     @Override
@@ -128,15 +134,14 @@ public class TransportWriteActionTests extends ESTestCase {
         TestRequest request = new TestRequest();
         request.setRefreshPolicy(RefreshPolicy.NONE); // The default, but we'll set it anyway just to be explicit
         TestAction testAction = new TestAction();
-        testAction.dispatchedShardOperationOnPrimary(request, indexShard,
-            ActionTestUtils.assertNoFailureListener(result -> {
-                CapturingActionListener<TestResponse> listener = new CapturingActionListener<>();
-                result.runPostReplicationActions(listener.map(ignore -> result.finalResponseIfSuccessful));
-                assertNotNull(listener.response);
-                assertNull(listener.failure);
-                verify(indexShard, never()).refresh(any());
-                verify(indexShard, never()).addRefreshListener(any(), any());
-            }));
+        testAction.dispatchedShardOperationOnPrimary(request, indexShard, ActionTestUtils.assertNoFailureListener(result -> {
+            CapturingActionListener<TestResponse> listener = new CapturingActionListener<>();
+            result.runPostReplicationActions(listener.map(ignore -> result.replicationResponse));
+            assertNotNull(listener.response);
+            assertNull(listener.failure);
+            verify(indexShard, never()).refresh(any());
+            verify(indexShard, never()).addRefreshListener(any(), any());
+        }));
     }
 
     public void testReplicaNoRefreshCall() throws Exception {
@@ -158,16 +163,24 @@ public class TransportWriteActionTests extends ESTestCase {
         TestRequest request = new TestRequest();
         request.setRefreshPolicy(RefreshPolicy.IMMEDIATE);
         TestAction testAction = new TestAction();
-        testAction.dispatchedShardOperationOnPrimary(request, indexShard,
-            ActionTestUtils.assertNoFailureListener(result -> {
-                CapturingActionListener<TestResponse> listener = new CapturingActionListener<>();
-                result.runPostReplicationActions(listener.map(ignore -> result.finalResponseIfSuccessful));
-                assertNotNull(listener.response);
-                assertNull(listener.failure);
-                assertTrue(listener.response.forcedRefresh);
-                verify(indexShard).refresh("refresh_flag_index");
-                verify(indexShard, never()).addRefreshListener(any(), any());
-            }));
+        testAction.dispatchedShardOperationOnPrimary(request, indexShard, ActionTestUtils.assertNoFailureListener(result -> {
+            CapturingActionListener<TestResponse> listener = new CapturingActionListener<>();
+            result.runPostReplicationActions(listener.map(ignore -> result.replicationResponse));
+
+            @SuppressWarnings({ "unchecked", "rawtypes" })
+            ArgumentCaptor<ActionListener<Boolean>> refreshListener = ArgumentCaptor.forClass((Class) ActionListener.class);
+            verify(testAction.postWriteRefresh).refreshShard(
+                eq(RefreshPolicy.IMMEDIATE),
+                eq(indexShard),
+                any(),
+                refreshListener.capture(),
+                eq(request.timeout())
+            );
+
+            // Now we can fire the listener manually and we'll get a response
+            refreshListener.getValue().onResponse(true);
+            assertEquals(true, listener.response.forcedRefresh);
+        }));
     }
 
     public void testReplicaImmediateRefresh() throws Exception {
@@ -179,10 +192,15 @@ public class TransportWriteActionTests extends ESTestCase {
         final TransportReplicationAction.ReplicaResult result = future.actionGet();
         CapturingActionListener<TransportResponse.Empty> listener = new CapturingActionListener<>();
         result.runPostReplicaActions(listener.map(ignore -> TransportResponse.Empty.INSTANCE));
+        assertNull(listener.response); // Haven't responded yet
+        @SuppressWarnings({ "unchecked", "rawtypes" })
+        ArgumentCaptor<ActionListener<Engine.RefreshResult>> refreshListener = ArgumentCaptor.forClass((Class) ActionListener.class);
+        verify(indexShard).externalRefresh(eq(PostWriteRefresh.FORCED_REFRESH_AFTER_INDEX), refreshListener.capture());
+        verify(indexShard, never()).addRefreshListener(any(), any());
+        // Fire the listener manually
+        refreshListener.getValue().onResponse(new Engine.RefreshResult(randomBoolean(), randomNonNegativeLong()));
         assertNotNull(listener.response);
         assertNull(listener.failure);
-        verify(indexShard).refresh("refresh_flag_index");
-        verify(indexShard, never()).addRefreshListener(any(), any());
     }
 
     public void testPrimaryWaitForRefresh() throws Exception {
@@ -190,24 +208,26 @@ public class TransportWriteActionTests extends ESTestCase {
         request.setRefreshPolicy(RefreshPolicy.WAIT_UNTIL);
 
         TestAction testAction = new TestAction();
-        testAction.dispatchedShardOperationOnPrimary(request, indexShard,
-            ActionTestUtils.assertNoFailureListener(result -> {
-                CapturingActionListener<TestResponse> listener = new CapturingActionListener<>();
-                result.runPostReplicationActions(listener.map(ignore -> result.finalResponseIfSuccessful));
-                assertNull(listener.response); // Haven't really responded yet
+        testAction.dispatchedShardOperationOnPrimary(request, indexShard, ActionTestUtils.assertNoFailureListener(result -> {
+            CapturingActionListener<TestResponse> listener = new CapturingActionListener<>();
+            result.runPostReplicationActions(listener.map(ignore -> result.replicationResponse));
+            assertNull(listener.response); // Haven't really responded yet
 
-                @SuppressWarnings({"unchecked", "rawtypes"})
-                ArgumentCaptor<Consumer<Boolean>> refreshListener = ArgumentCaptor.forClass((Class) Consumer.class);
-                verify(indexShard, never()).refresh(any());
-                verify(indexShard).addRefreshListener(any(), refreshListener.capture());
+            @SuppressWarnings({ "unchecked", "rawtypes" })
+            ArgumentCaptor<ActionListener<Boolean>> refreshListener = ArgumentCaptor.forClass((Class) ActionListener.class);
+            verify(testAction.postWriteRefresh).refreshShard(
+                eq(RefreshPolicy.WAIT_UNTIL),
+                eq(indexShard),
+                any(),
+                refreshListener.capture(),
+                eq(request.timeout())
+            );
 
-                // Now we can fire the listener manually and we'll get a response
-                boolean forcedRefresh = randomBoolean();
-                refreshListener.getValue().accept(forcedRefresh);
-                assertNotNull(listener.response);
-                assertNull(listener.failure);
-                assertEquals(forcedRefresh, listener.response.forcedRefresh);
-            }));
+            // Now we can fire the listener manually and we'll get a response
+            boolean forcedRefresh = randomBoolean();
+            refreshListener.getValue().onResponse(forcedRefresh);
+            assertEquals(forcedRefresh, listener.response.forcedRefresh);
+        }));
     }
 
     public void testReplicaWaitForRefresh() throws Exception {
@@ -232,16 +252,21 @@ public class TransportWriteActionTests extends ESTestCase {
         assertNull(listener.failure);
     }
 
-    public void testDocumentFailureInShardOperationOnPrimary() throws Exception {
-        TestRequest request = new TestRequest();
-        TestAction testAction = new TestAction(true, true);
-        testAction.dispatchedShardOperationOnPrimary(request, indexShard,
-            ActionTestUtils.assertNoFailureListener(result -> {
-                CapturingActionListener<TestResponse> listener = new CapturingActionListener<>();
-                result.runPostReplicationActions(listener.map(ignore -> result.finalResponseIfSuccessful));
-                assertNull(listener.response);
-                assertNotNull(listener.failure);
-            }));
+    public void testDocumentFailureInShardOperationOnPrimary() {
+        assertEquals(
+            "simulated",
+            expectThrows(
+                RuntimeException.class,
+                () -> PlainActionFuture.get(
+                    (PlainActionFuture<TransportReplicationAction.PrimaryResult<TestRequest, TestResponse>> future) -> new TestAction(
+                        true,
+                        randomBoolean()
+                    ).dispatchedShardOperationOnPrimary(new TestRequest(), indexShard, future),
+                    0,
+                    TimeUnit.SECONDS
+                )
+            ).getMessage()
+        );
     }
 
     public void testDocumentFailureInShardOperationOnReplica() throws Exception {
@@ -258,13 +283,25 @@ public class TransportWriteActionTests extends ESTestCase {
 
     public void testReplicaProxy() throws InterruptedException, ExecutionException {
         CapturingTransport transport = new CapturingTransport();
-        TransportService transportService = transport.createTransportService(clusterService.getSettings(), threadPool,
-            TransportService.NOOP_TRANSPORT_INTERCEPTOR, x -> clusterService.localNode(), null, Collections.emptySet());
+        TransportService transportService = transport.createTransportService(
+            clusterService.getSettings(),
+            threadPool,
+            TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+            x -> clusterService.localNode(),
+            null,
+            Collections.emptySet()
+        );
         transportService.start();
         transportService.acceptIncomingRequests();
         ShardStateAction shardStateAction = new ShardStateAction(clusterService, transportService, null, null, threadPool);
-        TestAction action = new TestAction(Settings.EMPTY, "internal:testAction", transportService,
-                clusterService, shardStateAction, threadPool);
+        TestAction action = new TestAction(
+            Settings.EMPTY,
+            "internal:testAction",
+            transportService,
+            clusterService,
+            shardStateAction,
+            threadPool
+        );
         final String index = "test";
         final ShardId shardId = new ShardId(index, "_na_", 0);
         ClusterState state = ClusterStateCreationUtils.stateWithActivePrimary(index, true, 1 + randomInt(3), randomInt(2));
@@ -275,19 +312,30 @@ public class TransportWriteActionTests extends ESTestCase {
 
         // check that at unknown node fails
         PlainActionFuture<ReplicaResponse> listener = new PlainActionFuture<>();
-        ShardRoutingState routingState = randomFrom(ShardRoutingState.INITIALIZING, ShardRoutingState.STARTED,
-            ShardRoutingState.RELOCATING);
+        ShardRoutingState routingState = randomFrom(
+            ShardRoutingState.INITIALIZING,
+            ShardRoutingState.STARTED,
+            ShardRoutingState.RELOCATING
+        );
         proxy.performOn(
-            TestShardRouting.newShardRouting(shardId, "NOT THERE",
-                routingState == ShardRoutingState.RELOCATING ? state.nodes().iterator().next().getId() : null, false, routingState),
-                new TestRequest(),
-                primaryTerm, randomNonNegativeLong(), randomNonNegativeLong(), listener);
+            TestShardRouting.newShardRouting(
+                shardId,
+                "NOT THERE",
+                routingState == ShardRoutingState.RELOCATING ? state.nodes().iterator().next().getId() : null,
+                false,
+                routingState
+            ),
+            new TestRequest(),
+            primaryTerm,
+            randomNonNegativeLong(),
+            randomNonNegativeLong(),
+            listener
+        );
         assertTrue(listener.isDone());
         assertListenerThrows("non existent node should throw a NoNodeAvailableException", listener, NoNodeAvailableException.class);
 
         final IndexShardRoutingTable shardRoutings = state.routingTable().shardRoutingTable(shardId);
-        final ShardRouting replica = randomFrom(shardRoutings.replicaShards().stream()
-            .filter(ShardRouting::assignedToNode).collect(Collectors.toList()));
+        final ShardRouting replica = randomFrom(shardRoutings.replicaShards().stream().filter(ShardRouting::assignedToNode).toList());
         listener = new PlainActionFuture<>();
         proxy.performOn(replica, new TestRequest(), primaryTerm, randomNonNegativeLong(), randomNonNegativeLong(), listener);
         assertFalse(listener.isDone());
@@ -295,49 +343,56 @@ public class TransportWriteActionTests extends ESTestCase {
         CapturingTransport.CapturedRequest[] captures = transport.getCapturedRequestsAndClear();
         assertThat(captures, arrayWithSize(1));
         if (randomBoolean()) {
-            final TransportReplicationAction.ReplicaResponse response =
-                    new TransportReplicationAction.ReplicaResponse(randomLong(), randomLong());
-            transport.handleResponse(captures[0].requestId, response);
+            final TransportReplicationAction.ReplicaResponse response = new TransportReplicationAction.ReplicaResponse(
+                randomLong(),
+                randomLong()
+            );
+            transport.handleResponse(captures[0].requestId(), response);
             assertTrue(listener.isDone());
             assertThat(listener.get(), equalTo(response));
         } else if (randomBoolean()) {
-            transport.handleRemoteError(captures[0].requestId, new ElasticsearchException("simulated"));
+            transport.handleRemoteError(captures[0].requestId(), new ElasticsearchException("simulated"));
             assertTrue(listener.isDone());
             assertListenerThrows("listener should reflect remote error", listener, ElasticsearchException.class);
         } else {
-            transport.handleError(captures[0].requestId, new TransportException("simulated"));
+            transport.handleError(captures[0].requestId(), new TransportException("simulated"));
             assertTrue(listener.isDone());
             assertListenerThrows("listener should reflect remote error", listener, TransportException.class);
         }
 
         AtomicReference<Object> failure = new AtomicReference<>();
         AtomicBoolean success = new AtomicBoolean();
-        proxy.failShardIfNeeded(replica, primaryTerm, "test", new ElasticsearchException("simulated"),
-            ActionListener.wrap(r -> success.set(true), failure::set));
+        proxy.failShardIfNeeded(
+            replica,
+            primaryTerm,
+            "test",
+            new ElasticsearchException("simulated"),
+            ActionListener.wrap(r -> success.set(true), failure::set)
+        );
         CapturingTransport.CapturedRequest[] shardFailedRequests = transport.getCapturedRequestsAndClear();
         // A write replication action proxy should fail the shard
         assertEquals(1, shardFailedRequests.length);
         CapturingTransport.CapturedRequest shardFailedRequest = shardFailedRequests[0];
-        ShardStateAction.FailedShardEntry shardEntry = (ShardStateAction.FailedShardEntry) shardFailedRequest.request;
+        ShardStateAction.FailedShardEntry shardEntry = (ShardStateAction.FailedShardEntry) shardFailedRequest.request();
         // the shard the request was sent to and the shard to be failed should be the same
         assertEquals(shardEntry.getShardId(), replica.shardId());
         assertEquals(shardEntry.getAllocationId(), replica.allocationId().getId());
         if (randomBoolean()) {
             // simulate success
-            transport.handleResponse(shardFailedRequest.requestId, TransportResponse.Empty.INSTANCE);
+            transport.handleResponse(shardFailedRequest.requestId(), TransportResponse.Empty.INSTANCE);
             assertTrue(success.get());
             assertNull(failure.get());
         } else if (randomBoolean()) {
             // simulate the primary has been demoted
-            transport.handleRemoteError(shardFailedRequest.requestId,
-                new ShardStateAction.NoLongerPrimaryShardException(replica.shardId(),
-                    "shard-failed-test"));
+            transport.handleRemoteError(
+                shardFailedRequest.requestId(),
+                new ShardStateAction.NoLongerPrimaryShardException(replica.shardId(), "shard-failed-test")
+            );
             assertFalse(success.get());
             assertNotNull(failure.get());
         } else {
             // simulated a node closing exception
-            transport.handleRemoteError(shardFailedRequest.requestId,
-                new NodeClosedException(state.nodes().getLocalNode()));
+            transport.handleRemoteError(shardFailedRequest.requestId(), new NodeClosedException(state.nodes().getLocalNode()));
             assertFalse(success.get());
             assertNotNull(failure.get());
         }
@@ -348,30 +403,68 @@ public class TransportWriteActionTests extends ESTestCase {
         private final boolean withDocumentFailureOnPrimary;
         private final boolean withDocumentFailureOnReplica;
 
+        private final PostWriteRefresh postWriteRefresh = mock(PostWriteRefresh.class);
+
         protected TestAction() {
             this(false, false);
         }
 
         protected TestAction(boolean withDocumentFailureOnPrimary, boolean withDocumentFailureOnReplica) {
-            super(Settings.EMPTY, "internal:test",
-                    new TransportService(Settings.EMPTY, mock(Transport.class), null, TransportService.NOOP_TRANSPORT_INTERCEPTOR,
-                        x -> null, null, Collections.emptySet()), TransportWriteActionTests.this.clusterService, null, null, null,
-                new ActionFilters(new HashSet<>()), TestRequest::new, TestRequest::new, ignore -> ThreadPool.Names.SAME, false,
-                new IndexingPressure(Settings.EMPTY), EmptySystemIndices.INSTANCE);
+            super(
+                Settings.EMPTY,
+                "internal:test",
+                new TransportService(
+                    Settings.EMPTY,
+                    mock(Transport.class),
+                    TransportWriteActionTests.threadPool,
+                    TransportService.NOOP_TRANSPORT_INTERCEPTOR,
+                    x -> null,
+                    null,
+                    Collections.emptySet()
+                ),
+                TransportWriteActionTests.this.clusterService,
+                null,
+                null,
+                null,
+                new ActionFilters(new HashSet<>()),
+                TestRequest::new,
+                TestRequest::new,
+                (service, ignore) -> ThreadPool.Names.SAME,
+                false,
+                new IndexingPressure(Settings.EMPTY),
+                EmptySystemIndices.INSTANCE
+            );
             this.withDocumentFailureOnPrimary = withDocumentFailureOnPrimary;
             this.withDocumentFailureOnReplica = withDocumentFailureOnReplica;
         }
 
-        protected TestAction(Settings settings, String actionName, TransportService transportService,
-                             ClusterService clusterService, ShardStateAction shardStateAction, ThreadPool threadPool) {
-            super(settings, actionName, transportService, clusterService,
-                    mockIndicesService(clusterService), threadPool, shardStateAction,
-                    new ActionFilters(new HashSet<>()), TestRequest::new, TestRequest::new, ignore -> ThreadPool.Names.SAME, false,
-                    new IndexingPressure(settings), EmptySystemIndices.INSTANCE);
+        protected TestAction(
+            Settings settings,
+            String actionName,
+            TransportService transportService,
+            ClusterService clusterService,
+            ShardStateAction shardStateAction,
+            ThreadPool threadPool
+        ) {
+            super(
+                settings,
+                actionName,
+                transportService,
+                clusterService,
+                mockIndicesService(clusterService),
+                threadPool,
+                shardStateAction,
+                new ActionFilters(new HashSet<>()),
+                TestRequest::new,
+                TestRequest::new,
+                (service, ignore) -> ThreadPool.Names.SAME,
+                false,
+                new IndexingPressure(settings),
+                EmptySystemIndices.INSTANCE
+            );
             this.withDocumentFailureOnPrimary = false;
             this.withDocumentFailureOnReplica = false;
         }
-
 
         @Override
         protected TestResponse newResponseInstance(StreamInput in) throws IOException {
@@ -380,12 +473,15 @@ public class TransportWriteActionTests extends ESTestCase {
 
         @Override
         protected void dispatchedShardOperationOnPrimary(
-                TestRequest request, IndexShard primary, ActionListener<PrimaryResult<TestRequest, TestResponse>> listener) {
+            TestRequest request,
+            IndexShard primary,
+            ActionListener<PrimaryResult<TestRequest, TestResponse>> listener
+        ) {
             ActionListener.completeWith(listener, () -> {
                 if (withDocumentFailureOnPrimary) {
-                    return new WritePrimaryResult<>(request, null, null, new RuntimeException("simulated"), primary, logger);
+                    throw new RuntimeException("simulated");
                 } else {
-                    return new WritePrimaryResult<>(request, new TestResponse(), location, null, primary, logger);
+                    return new WritePrimaryResult<>(request, new TestResponse(), location, primary, logger, postWriteRefresh);
                 }
             });
         }
@@ -420,7 +516,7 @@ public class TransportWriteActionTests extends ESTestCase {
     final IndicesService mockIndicesService(ClusterService clusterService) {
         final IndicesService indicesService = mock(IndicesService.class);
         when(indicesService.indexServiceSafe(any(Index.class))).then(invocation -> {
-            Index index = (Index)invocation.getArguments()[0];
+            Index index = (Index) invocation.getArguments()[0];
             final ClusterState state = clusterService.state();
             final IndexMetadata indexSafe = state.metadata().getIndexSafe(index);
             return mockIndexService(indexSafe, clusterService);
@@ -444,24 +540,26 @@ public class TransportWriteActionTests extends ESTestCase {
     private IndexShard mockIndexShard(ShardId shardId, ClusterService clusterService) {
         final IndexShard indexShard = mock(IndexShard.class);
         doAnswer(invocation -> {
+            @SuppressWarnings("unchecked")
             ActionListener<Releasable> callback = (ActionListener<Releasable>) invocation.getArguments()[0];
             count.incrementAndGet();
             callback.onResponse(count::decrementAndGet);
             return null;
-        }).when(indexShard).acquirePrimaryOperationPermit(any(ActionListener.class), anyString(), anyObject());
+        }).when(indexShard).acquirePrimaryOperationPermit(anyActionListener(), anyString(), any());
         doAnswer(invocation -> {
-            long term = (Long)invocation.getArguments()[0];
+            long term = (Long) invocation.getArguments()[0];
+            @SuppressWarnings("unchecked")
             ActionListener<Releasable> callback = (ActionListener<Releasable>) invocation.getArguments()[1];
             final long primaryTerm = indexShard.getPendingPrimaryTerm();
             if (term < primaryTerm) {
-                throw new IllegalArgumentException(String.format(Locale.ROOT, "%s operation term [%d] is too old (current [%d])",
-                    shardId, term, primaryTerm));
+                throw new IllegalArgumentException(
+                    Strings.format("%s operation term [%d] is too old (current [%d])", shardId, term, primaryTerm)
+                );
             }
             count.incrementAndGet();
             callback.onResponse(count::decrementAndGet);
             return null;
-        }).when(indexShard)
-            .acquireReplicaOperationPermit(anyLong(), anyLong(), anyLong(), any(ActionListener.class), anyString(), anyObject());
+        }).when(indexShard).acquireReplicaOperationPermit(anyLong(), anyLong(), anyLong(), anyActionListener(), anyString());
         when(indexShard.routingEntry()).thenAnswer(invocationOnMock -> {
             final ClusterState state = clusterService.state();
             final RoutingNode node = state.getRoutingNodes().node(state.nodes().getLocalNodeId());
@@ -473,8 +571,9 @@ public class TransportWriteActionTests extends ESTestCase {
         });
         when(indexShard.isRelocatedPrimary()).thenAnswer(invocationOnMock -> isRelocated.get());
         doThrow(new AssertionError("failed shard is not supported")).when(indexShard).failShard(anyString(), any(Exception.class));
-        when(indexShard.getPendingPrimaryTerm()).thenAnswer(i ->
-            clusterService.state().metadata().getIndexSafe(shardId.getIndex()).primaryTerm(shardId.id()));
+        when(indexShard.getPendingPrimaryTerm()).thenAnswer(
+            i -> clusterService.state().metadata().getIndexSafe(shardId.getIndex()).primaryTerm(shardId.id())
+        );
         return indexShard;
     }
 
