@@ -9,15 +9,18 @@
 package org.elasticsearch.cluster.node;
 
 import com.carrotsearch.randomizedtesting.generators.RandomPicks;
-import org.elasticsearch.Version;
-import org.elasticsearch.common.settings.Setting;
-import org.elasticsearch.common.transport.TransportAddress;
-import org.elasticsearch.test.ESTestCase;
 
+import org.elasticsearch.TransportVersion;
+import org.elasticsearch.Version;
+import org.elasticsearch.common.transport.TransportAddress;
+import org.elasticsearch.index.IndexVersion;
+import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.test.VersionUtils;
+
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -25,6 +28,10 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.BiFunction;
+import java.util.function.Consumer;
+import java.util.function.IntFunction;
+import java.util.function.ObjLongConsumer;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
@@ -39,7 +46,7 @@ public class DiscoveryNodesTests extends ESTestCase {
 
     public void testResolveNodeByIdOrName() {
         DiscoveryNodes discoveryNodes = buildDiscoveryNodes();
-        DiscoveryNode[] nodes = discoveryNodes.getNodes().values().toArray(DiscoveryNode.class);
+        DiscoveryNode[] nodes = discoveryNodes.getNodes().values().toArray(DiscoveryNode[]::new);
         DiscoveryNode node = randomFrom(nodes);
         DiscoveryNode resolvedNode = discoveryNodes.resolveNode(randomBoolean() ? node.getId() : node.getName());
         assertThat(resolvedNode.getId(), equalTo(node.getId()));
@@ -76,18 +83,19 @@ public class DiscoveryNodesTests extends ESTestCase {
     public void testAll() {
         final DiscoveryNodes discoveryNodes = buildDiscoveryNodes();
 
-        final String[] allNodes =
-                StreamSupport.stream(discoveryNodes.spliterator(), false).map(DiscoveryNode::getId).toArray(String[]::new);
+        final String[] allNodes = StreamSupport.stream(discoveryNodes.spliterator(), false)
+            .map(DiscoveryNode::getId)
+            .toArray(String[]::new);
         assertThat(discoveryNodes.resolveNodes(), arrayContainingInAnyOrder(allNodes));
         assertThat(discoveryNodes.resolveNodes(new String[0]), arrayContainingInAnyOrder(allNodes));
         assertThat(discoveryNodes.resolveNodes("_all"), arrayContainingInAnyOrder(allNodes));
 
-        final String[] nonMasterNodes =
-                StreamSupport.stream(discoveryNodes.getNodes().values().spliterator(), false)
-                        .map(n -> n.value)
-                        .filter(n -> n.isMasterNode() == false)
-                        .map(DiscoveryNode::getId)
-                        .toArray(String[]::new);
+        final String[] nonMasterNodes = discoveryNodes.getNodes()
+            .values()
+            .stream()
+            .filter(n -> n.isMasterNode() == false)
+            .map(DiscoveryNode::getId)
+            .toArray(String[]::new);
         assertThat(discoveryNodes.resolveNodes("_all", "master:false"), arrayContainingInAnyOrder(nonMasterNodes));
 
         assertThat(discoveryNodes.resolveNodes("master:false", "_all"), arrayContainingInAnyOrder(allNodes));
@@ -96,23 +104,25 @@ public class DiscoveryNodesTests extends ESTestCase {
     public void testCoordinatorOnlyNodes() {
         final DiscoveryNodes discoveryNodes = buildDiscoveryNodes();
 
-        final String[] coordinatorOnlyNodes =
-                StreamSupport.stream(discoveryNodes.getNodes().values().spliterator(), false)
-                    .map(n -> n.value)
-                    .filter(n -> n.isDataNode() == false && n.isIngestNode() == false && n.isMasterNode() == false)
-                    .map(DiscoveryNode::getId)
-                    .toArray(String[]::new);
+        final String[] coordinatorOnlyNodes = discoveryNodes.getNodes()
+            .values()
+            .stream()
+            .filter(n -> n.canContainData() == false && n.isIngestNode() == false && n.isMasterNode() == false)
+            .map(DiscoveryNode::getId)
+            .toArray(String[]::new);
 
-        final String[] nonCoordinatorOnlyNodes =
-                StreamSupport.stream(discoveryNodes.getNodes().values().spliterator(), false)
-                    .map(n -> n.value)
-                    .filter(n -> n.isMasterNode() || n.isDataNode() || n.isIngestNode())
-                    .map(DiscoveryNode::getId)
-                    .toArray(String[]::new);
+        final String[] nonCoordinatorOnlyNodes = discoveryNodes.getNodes()
+            .values()
+            .stream()
+            .filter(n -> n.isMasterNode() || n.canContainData() || n.isIngestNode())
+            .map(DiscoveryNode::getId)
+            .toArray(String[]::new);
 
         assertThat(discoveryNodes.resolveNodes("coordinating_only:true"), arrayContainingInAnyOrder(coordinatorOnlyNodes));
-        assertThat(discoveryNodes.resolveNodes("_all", "data:false", "ingest:false", "master:false"),
-            arrayContainingInAnyOrder(coordinatorOnlyNodes));
+        assertThat(
+            discoveryNodes.resolveNodes("_all", "data:false", "ingest:false", "master:false"),
+            arrayContainingInAnyOrder(coordinatorOnlyNodes)
+        );
         assertThat(discoveryNodes.resolveNodes("_all", "coordinating_only:false"), arrayContainingInAnyOrder(nonCoordinatorOnlyNodes));
     }
 
@@ -129,14 +139,14 @@ public class DiscoveryNodesTests extends ESTestCase {
             }
         }
         int numNodeIds = randomIntBetween(0, 3);
-        String[] nodeIds = discoveryNodes.getNodes().keys().toArray(String.class);
+        String[] nodeIds = discoveryNodes.getNodes().keySet().toArray(new String[0]);
         for (int i = 0; i < numNodeIds; i++) {
             String nodeId = randomFrom(nodeIds);
             nodeSelectors.add(nodeId);
             expectedNodeIdsSet.add(nodeId);
         }
         int numNodeNames = randomIntBetween(0, 3);
-        DiscoveryNode[] nodes = discoveryNodes.getNodes().values().toArray(DiscoveryNode.class);
+        DiscoveryNode[] nodes = discoveryNodes.getNodes().values().toArray(DiscoveryNode[]::new);
         for (int i = 0; i < numNodeNames; i++) {
             DiscoveryNode discoveryNode = randomFrom(nodes);
             nodeSelectors.add(discoveryNode.getName());
@@ -154,12 +164,19 @@ public class DiscoveryNodesTests extends ESTestCase {
         final List<DiscoveryNode> inputNodes = randomNodes(10);
         final DiscoveryNodes.Builder discoBuilder = DiscoveryNodes.builder();
         inputNodes.forEach(discoBuilder::add);
-        final List<DiscoveryNode> returnedNodes = discoBuilder.build().mastersFirstStream().collect(Collectors.toList());
+        final List<DiscoveryNode> returnedNodes = discoBuilder.build().mastersFirstStream().toList();
         assertEquals(returnedNodes.size(), inputNodes.size());
         assertEquals(new HashSet<>(returnedNodes), new HashSet<>(inputNodes));
-        final List<DiscoveryNode> sortedNodes = new ArrayList<>(returnedNodes);
-        Collections.sort(sortedNodes, Comparator.comparing(n -> n.isMasterNode() == false));
-        assertEquals(sortedNodes, returnedNodes);
+
+        boolean mastersOk = true;
+        final var message = returnedNodes.toString();
+        for (final var discoveryNode : returnedNodes) {
+            if (discoveryNode.isMasterNode()) {
+                assertTrue(message, mastersOk);
+            } else {
+                mastersOk = false;
+            }
+        }
     }
 
     public void testDeltaListsMultipleNodes() {
@@ -170,14 +187,22 @@ public class DiscoveryNodesTests extends ESTestCase {
         final DiscoveryNodes nodes012 = DiscoveryNodes.builder(nodes01).add(discoveryNodes.get(2)).build();
 
         assertThat(nodes01.delta(nodes0).shortSummary(), equalTo("added {" + noAttr(discoveryNodes.get(1)) + "}"));
-        assertThat(nodes012.delta(nodes0).shortSummary(), oneOf(
-            "added {" + noAttr(discoveryNodes.get(1)) + ", " + noAttr(discoveryNodes.get(2)) + "}",
-            "added {" + noAttr(discoveryNodes.get(2)) + ", " + noAttr(discoveryNodes.get(1)) + "}"));
+        assertThat(
+            nodes012.delta(nodes0).shortSummary(),
+            oneOf(
+                "added {" + noAttr(discoveryNodes.get(1)) + ", " + noAttr(discoveryNodes.get(2)) + "}",
+                "added {" + noAttr(discoveryNodes.get(2)) + ", " + noAttr(discoveryNodes.get(1)) + "}"
+            )
+        );
 
         assertThat(nodes0.delta(nodes01).shortSummary(), equalTo("removed {" + noAttr(discoveryNodes.get(1)) + "}"));
-        assertThat(nodes0.delta(nodes012).shortSummary(), oneOf(
-            "removed {" + noAttr(discoveryNodes.get(1)) + ", " + noAttr(discoveryNodes.get(2)) + "}",
-            "removed {" + noAttr(discoveryNodes.get(2)) + ", " + noAttr(discoveryNodes.get(1)) + "}"));
+        assertThat(
+            nodes0.delta(nodes012).shortSummary(),
+            oneOf(
+                "removed {" + noAttr(discoveryNodes.get(1)) + ", " + noAttr(discoveryNodes.get(2)) + "}",
+                "removed {" + noAttr(discoveryNodes.get(2)) + ", " + noAttr(discoveryNodes.get(1)) + "}"
+            )
+        );
 
         final DiscoveryNodes nodes01Local = DiscoveryNodes.builder(nodes01).localNodeId(discoveryNodes.get(1).getId()).build();
         final DiscoveryNodes nodes02Local = DiscoveryNodes.builder(nodes012).localNodeId(discoveryNodes.get(1).getId()).build();
@@ -186,9 +211,13 @@ public class DiscoveryNodesTests extends ESTestCase {
         assertThat(nodes02Local.delta(nodes0).shortSummary(), equalTo("added {" + noAttr(discoveryNodes.get(2)) + "}"));
 
         assertThat(nodes0.delta(nodes01Local).shortSummary(), equalTo("removed {" + noAttr(discoveryNodes.get(1)) + "}"));
-        assertThat(nodes0.delta(nodes02Local).shortSummary(), oneOf(
-            "removed {" + noAttr(discoveryNodes.get(1)) + ", " + noAttr(discoveryNodes.get(2)) + "}",
-            "removed {" + noAttr(discoveryNodes.get(2)) + ", " + noAttr(discoveryNodes.get(1)) + "}"));
+        assertThat(
+            nodes0.delta(nodes02Local).shortSummary(),
+            oneOf(
+                "removed {" + noAttr(discoveryNodes.get(1)) + ", " + noAttr(discoveryNodes.get(2)) + "}",
+                "removed {" + noAttr(discoveryNodes.get(2)) + ", " + noAttr(discoveryNodes.get(1)) + "}"
+            )
+        );
     }
 
     public void testDeltas() {
@@ -202,8 +231,17 @@ public class DiscoveryNodesTests extends ESTestCase {
                 Map<String, String> attrs = new HashMap<>(node.getAttributes());
                 attrs.put("new", "new");
                 final TransportAddress nodeAddress = node.getAddress();
-                node = new DiscoveryNode(node.getName(), node.getId(), node.getEphemeralId(), nodeAddress.address().getHostString(),
-                    nodeAddress.getAddress(), nodeAddress, attrs, node.getRoles(), node.getVersion());
+                node = new DiscoveryNode(
+                    node.getName(),
+                    node.getId(),
+                    node.getEphemeralId(),
+                    nodeAddress.address().getHostString(),
+                    nodeAddress.getAddress(),
+                    nodeAddress,
+                    attrs,
+                    node.getRoles(),
+                    node.getVersionInformation()
+                );
             }
             nodesB.add(node);
         }
@@ -212,13 +250,13 @@ public class DiscoveryNodesTests extends ESTestCase {
         DiscoveryNode masterB = randomBoolean() ? null : RandomPicks.randomFrom(random(), nodesB);
 
         DiscoveryNodes.Builder builderA = DiscoveryNodes.builder();
-        nodesA.stream().forEach(builderA::add);
+        nodesA.forEach(builderA::add);
         final String masterAId = masterA == null ? null : masterA.getId();
         builderA.masterNodeId(masterAId);
         builderA.localNodeId(RandomPicks.randomFrom(random(), nodesA).getId());
 
         DiscoveryNodes.Builder builderB = DiscoveryNodes.builder();
-        nodesB.stream().forEach(builderB::add);
+        nodesB.forEach(builderB::add);
         final String masterBId = masterB == null ? null : masterB.getId();
         builderB.masterNodeId(masterBId);
         builderB.localNodeId(RandomPicks.randomFrom(random(), nodesB).getId());
@@ -250,13 +288,13 @@ public class DiscoveryNodesTests extends ESTestCase {
         Set<DiscoveryNode> newNodes = new HashSet<>(nodesB);
         newNodes.removeAll(nodesA);
         assertThat(delta.added(), equalTo(newNodes.isEmpty() == false));
-        assertThat(delta.addedNodes(), containsInAnyOrder(newNodes.stream().collect(Collectors.toList()).toArray()));
+        assertThat(delta.addedNodes(), containsInAnyOrder(newNodes.stream().toList().toArray()));
         assertThat(delta.addedNodes().size(), equalTo(newNodes.size()));
 
         Set<DiscoveryNode> removedNodes = new HashSet<>(nodesA);
         removedNodes.removeAll(nodesB);
         assertThat(delta.removed(), equalTo(removedNodes.isEmpty() == false));
-        assertThat(delta.removedNodes(), containsInAnyOrder(removedNodes.stream().collect(Collectors.toList()).toArray()));
+        assertThat(delta.removedNodes(), containsInAnyOrder(removedNodes.stream().toList().toArray()));
         assertThat(delta.removedNodes().size(), equalTo(removedNodes.size()));
     }
 
@@ -269,16 +307,9 @@ public class DiscoveryNodesTests extends ESTestCase {
             if (frequently()) {
                 attributes.put("custom", randomBoolean() ? "match" : randomAlphaOfLengthBetween(3, 5));
             }
-            final Set<DiscoveryNodeRole> roles = new HashSet<>(randomSubsetOf(DiscoveryNodeRole.BUILT_IN_ROLES));
+            final Set<DiscoveryNodeRole> roles = new HashSet<>(randomSubsetOf(DiscoveryNodeRole.roles()));
             if (frequently()) {
-                roles.add(new DiscoveryNodeRole("custom_role", "cr") {
-
-                    @Override
-                    public Setting<Boolean> legacySetting() {
-                        return null;
-                    }
-
-                });
+                roles.add(new DiscoveryNodeRole("custom_role", "cr"));
             }
             final DiscoveryNode node = newNode(idGenerator.getAndIncrement(), attributes, roles);
             nodesList.add(node);
@@ -299,8 +330,7 @@ public class DiscoveryNodesTests extends ESTestCase {
     }
 
     private static DiscoveryNode newNode(int nodeId, Map<String, String> attributes, Set<DiscoveryNodeRole> roles) {
-        return new DiscoveryNode("name_" + nodeId, "node_" + nodeId, buildNewFakeTransportAddress(), attributes, roles,
-            Version.CURRENT);
+        return DiscoveryNodeUtils.builder("node_" + nodeId).name("name_" + nodeId).attributes(attributes).roles(roles).build();
     }
 
     private enum NodeSelector {
@@ -309,60 +339,57 @@ public class DiscoveryNodesTests extends ESTestCase {
             Set<String> matchingNodeIds(DiscoveryNodes nodes) {
                 return Collections.singleton(nodes.getLocalNodeId());
             }
-        }, ELECTED_MASTER("_master") {
+        },
+        ELECTED_MASTER("_master") {
             @Override
             Set<String> matchingNodeIds(DiscoveryNodes nodes) {
                 return Collections.singleton(nodes.getMasterNodeId());
             }
-        }, MASTER_ELIGIBLE(DiscoveryNodeRole.MASTER_ROLE.roleName() + ":true") {
+        },
+        MASTER_ELIGIBLE(DiscoveryNodeRole.MASTER_ROLE.roleName() + ":true") {
             @Override
             Set<String> matchingNodeIds(DiscoveryNodes nodes) {
-                Set<String> ids = new HashSet<>();
-                nodes.getMasterNodes().keysIt().forEachRemaining(ids::add);
-                return ids;
+                return nodes.getMasterNodes().keySet();
             }
-        }, DATA(DiscoveryNodeRole.DATA_ROLE.roleName() + ":true") {
+        },
+        DATA(DiscoveryNodeRole.DATA_ROLE.roleName() + ":true") {
             @Override
             Set<String> matchingNodeIds(DiscoveryNodes nodes) {
-                Set<String> ids = new HashSet<>();
-                nodes.getDataNodes().keysIt().forEachRemaining(ids::add);
-                return ids;
+                return nodes.getDataNodes().keySet();
             }
-        }, INGEST(DiscoveryNodeRole.INGEST_ROLE.roleName() + ":true") {
+        },
+        INGEST(DiscoveryNodeRole.INGEST_ROLE.roleName() + ":true") {
             @Override
             Set<String> matchingNodeIds(DiscoveryNodes nodes) {
-                Set<String> ids = new HashSet<>();
-                nodes.getIngestNodes().keysIt().forEachRemaining(ids::add);
-                return ids;
+                return nodes.getIngestNodes().keySet();
             }
-        }, COORDINATING_ONLY(DiscoveryNode.COORDINATING_ONLY + ":true") {
+        },
+        COORDINATING_ONLY(DiscoveryNode.COORDINATING_ONLY + ":true") {
             @Override
             Set<String> matchingNodeIds(DiscoveryNodes nodes) {
-                Set<String> ids = new HashSet<>();
-                nodes.getCoordinatingOnlyNodes().keysIt().forEachRemaining(ids::add);
-                return ids;
+                return nodes.getCoordinatingOnlyNodes().keySet();
             }
-        }, CUSTOM_ATTRIBUTE("attr:value") {
+        },
+        CUSTOM_ATTRIBUTE("attr:value") {
             @Override
             Set<String> matchingNodeIds(DiscoveryNodes nodes) {
-                Set<String> ids = new HashSet<>();
-                nodes.getNodes().valuesIt().forEachRemaining(node -> {
-                    if ("value".equals(node.getAttributes().get("attr"))) {
-                        ids.add(node.getId());
-                    }
-                });
-                return ids;
+                return nodes.getNodes()
+                    .values()
+                    .stream()
+                    .filter(node -> "value".equals(node.getAttributes().get("attr")))
+                    .map(DiscoveryNode::getId)
+                    .collect(Collectors.toSet());
             }
-        }, CUSTOM_ROLE("custom_role:true") {
+        },
+        CUSTOM_ROLE("custom_role:true") {
             @Override
             Set<String> matchingNodeIds(DiscoveryNodes nodes) {
-                Set<String> ids = new HashSet<>();
-                nodes.getNodes().valuesIt().forEachRemaining(node -> {
-                    if (node.getRoles().stream().anyMatch(role -> role.roleName().equals("custom_role"))) {
-                        ids.add(node.getId());
-                    }
-                });
-                return ids;
+                return nodes.getNodes()
+                    .values()
+                    .stream()
+                    .filter(node -> node.getRoles().stream().anyMatch(role -> role.roleName().equals("custom_role")))
+                    .map(DiscoveryNode::getId)
+                    .collect(Collectors.toSet());
             }
         };
 
@@ -375,22 +402,43 @@ public class DiscoveryNodesTests extends ESTestCase {
         abstract Set<String> matchingNodeIds(DiscoveryNodes nodes);
     }
 
-    public void testMaxMinNodeVersion() {
+    public void testMinMaxNodeVersions() {
+        assertEquals(Version.CURRENT, DiscoveryNodes.EMPTY_NODES.getMaxNodeVersion());
+        assertEquals(Version.CURRENT.minimumCompatibilityVersion(), DiscoveryNodes.EMPTY_NODES.getMinNodeVersion());
+        assertEquals(IndexVersion.current(), DiscoveryNodes.EMPTY_NODES.getMaxDataNodeCompatibleIndexVersion());
+        assertEquals(IndexVersion.MINIMUM_COMPATIBLE, DiscoveryNodes.EMPTY_NODES.getMinSupportedIndexVersion());
+
+        // use a mix of versions with major, minor, and patch numbers
+        List<VersionInformation> dataVersions = List.of(
+            new VersionInformation(Version.fromString("3.2.5"), IndexVersion.fromId(2000099), IndexVersion.fromId(3020599)),
+            new VersionInformation(Version.fromString("3.0.7"), IndexVersion.fromId(2000099), IndexVersion.fromId(3000799)),
+            new VersionInformation(Version.fromString("2.1.0"), IndexVersion.fromId(1050099), IndexVersion.fromId(2010099))
+        );
+        List<VersionInformation> observerVersions = List.of(
+            new VersionInformation(Version.fromString("5.0.17"), IndexVersion.fromId(0), IndexVersion.fromId(5001799)),
+            new VersionInformation(Version.fromString("2.0.1"), IndexVersion.fromId(1000099), IndexVersion.fromId(2000199)),
+            new VersionInformation(Version.fromString("1.6.0"), IndexVersion.fromId(0), IndexVersion.fromId(1060099))
+        );
+
         DiscoveryNodes.Builder discoBuilder = DiscoveryNodes.builder();
-        discoBuilder.add(new DiscoveryNode("name_" + 1, "node_" + 1, buildNewFakeTransportAddress(), Collections.emptyMap(),
-            new HashSet<>(randomSubsetOf(DiscoveryNodeRole.BUILT_IN_ROLES)),
-            Version.fromString("5.1.0")));
-        discoBuilder.add(new DiscoveryNode("name_" + 2, "node_" + 2, buildNewFakeTransportAddress(), Collections.emptyMap(),
-            new HashSet<>(randomSubsetOf(DiscoveryNodeRole.BUILT_IN_ROLES)),
-            Version.fromString("6.3.0")));
-        discoBuilder.add(new DiscoveryNode("name_" + 3, "node_" + 3, buildNewFakeTransportAddress(), Collections.emptyMap(),
-            new HashSet<>(randomSubsetOf(DiscoveryNodeRole.BUILT_IN_ROLES)),
-            Version.fromString("1.1.0")));
-        discoBuilder.localNodeId("name_1");
-        discoBuilder.masterNodeId("name_2");
+        for (int i = 0; i < dataVersions.size(); i++) {
+            discoBuilder.add(
+                DiscoveryNodeUtils.builder("data_" + i)
+                    .version(dataVersions.get(i))
+                    .roles(Set.of(randomBoolean() ? DiscoveryNodeRole.DATA_ROLE : DiscoveryNodeRole.MASTER_ROLE))
+                    .build()
+            );
+        }
+        for (int i = 0; i < observerVersions.size(); i++) {
+            discoBuilder.add(DiscoveryNodeUtils.builder("observer_" + i).version(observerVersions.get(i)).roles(Set.of()).build());
+        }
         DiscoveryNodes build = discoBuilder.build();
-        assertEquals( Version.fromString("6.3.0"), build.getMaxNodeVersion());
-        assertEquals( Version.fromString("1.1.0"), build.getMinNodeVersion());
+
+        assertEquals(Version.fromString("5.0.17"), build.getMaxNodeVersion());
+        assertEquals(Version.fromString("1.6.0"), build.getMinNodeVersion());
+        assertEquals(Version.fromString("2.1.0"), build.getSmallestNonClientNodeVersion());  // doesn't include 1.6.0 observer
+        assertEquals(IndexVersion.fromId(2010099), build.getMaxDataNodeCompatibleIndexVersion());   // doesn't include 2000199 observer
+        assertEquals(IndexVersion.fromId(2000099), build.getMinSupportedIndexVersion());            // also includes observers
     }
 
     private static String noAttr(DiscoveryNode discoveryNode) {
@@ -399,4 +447,84 @@ public class DiscoveryNodesTests extends ESTestCase {
         return stringBuilder.toString();
     }
 
+    public void testNodeLeftGeneration() {
+
+        final ObjLongConsumer<Consumer<DiscoveryNodes.Builder>> testHarness = new ObjLongConsumer<>() {
+            DiscoveryNodes discoveryNodes;
+
+            @Override
+            public void accept(Consumer<DiscoveryNodes.Builder> update, long expectedGeneration) {
+                final var builder = discoveryNodes == null ? DiscoveryNodes.builder() : DiscoveryNodes.builder(discoveryNodes);
+                update.accept(builder);
+                discoveryNodes = builder.build();
+                if (randomBoolean()) {
+                    try {
+                        discoveryNodes = copyWriteable(
+                            discoveryNodes,
+                            writableRegistry(),
+                            in -> DiscoveryNodes.readFrom(in, null),
+                            TransportVersion.current()
+                        );
+                    } catch (IOException e) {
+                        throw new AssertionError("unexpected", e);
+                    }
+                }
+                assertEquals(expectedGeneration, discoveryNodes.getNodeLeftGeneration());
+            }
+        };
+
+        final BiFunction<Integer, VersionInformation, DiscoveryNode> nodeVersionFactory = (i, v) -> new DiscoveryNode(
+            "name" + i,
+            "id" + i,
+            buildNewFakeTransportAddress(),
+            Collections.emptyMap(),
+            new HashSet<>(randomSubsetOf(DiscoveryNodeRole.roles())),
+            v
+        );
+
+        final IntFunction<DiscoveryNode> nodeFactory = i -> nodeVersionFactory.apply(i, VersionInformation.CURRENT);
+
+        final var node0 = nodeVersionFactory.apply(
+            0,
+            new VersionInformation(VersionUtils.randomVersion(random()), IndexVersion.MINIMUM_COMPATIBLE, IndexVersion.current())
+        );
+        testHarness.accept(builder -> builder.add(node0), 0L);
+
+        final var node1 = nodeFactory.apply(1);
+        testHarness.accept(builder -> builder.add(node1), 0L);
+
+        // removing a node by ID increments the generation
+        testHarness.accept(builder -> builder.remove(node0.getId()), 1L);
+
+        // no-op removal by ID changes nothing
+        testHarness.accept(builder -> builder.remove("not-an-id"), 1L);
+
+        // no-op removal by instance changes nothing
+        final var node2 = nodeFactory.apply(2);
+        testHarness.accept(builder -> builder.remove(node2), 1L);
+
+        // adding another node changes nothing
+        testHarness.accept(builder -> builder.add(node2), 1L);
+
+        // and removing it by instance increments the generation
+        testHarness.accept(builder -> builder.remove(node2), 2L);
+
+        // if old nodes are present then the generation is forced to zero
+        final var node3 = nodeVersionFactory.apply(3, VersionInformation.inferVersions(Version.V_8_8_0));
+        testHarness.accept(builder -> builder.add(node3), 0L);
+
+        // and it remains at zero while the old node is present
+        testHarness.accept(builder -> builder.remove(node1), 0L);
+
+        // but it starts incrementing again when the old node is removed
+        final var node4 = nodeFactory.apply(4);
+        testHarness.accept(builder -> builder.add(node4).remove(node3), 1L);
+
+        // removing multiple nodes at once increments it only by one
+        final var node5 = nodeFactory.apply(5);
+        final var node6 = nodeFactory.apply(6);
+        final var node7 = nodeFactory.apply(7);
+        testHarness.accept(builder -> builder.add(node5).add(node6).add(node7), 1L);
+        testHarness.accept(builder -> builder.remove(node5).remove(node6).remove(node7), 2L);
+    }
 }
