@@ -8,7 +8,6 @@
 
 package org.elasticsearch.common.io.stream;
 
-import org.apache.lucene.store.AlreadyClosedException;
 import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.Constants;
 import org.elasticsearch.common.bytes.BytesArray;
@@ -16,17 +15,17 @@ import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.geo.GeoPoint;
 import org.elasticsearch.common.lucene.BytesRefs;
-import org.elasticsearch.common.unit.TimeValue;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.PageCacheRecycler;
-import org.elasticsearch.script.JodaCompatibleZonedDateTime;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.test.ESTestCase;
-import org.joda.time.DateTime;
-import org.joda.time.DateTimeZone;
 
 import java.io.EOFException;
 import java.io.IOException;
+import java.time.Instant;
 import java.time.OffsetTime;
 import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -48,7 +47,6 @@ import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.nullValue;
-import static org.hamcrest.Matchers.sameInstance;
 
 /**
  * Tests for {@link StreamOutput}.
@@ -100,7 +98,7 @@ public class BytesStreamsTests extends ESTestCase {
         BytesStreamOutput out = new BytesStreamOutput();
 
         // bulk-write with wrong args
-        expectThrows(IllegalArgumentException.class, () -> out.writeBytes(new byte[]{}, 0, 1));
+        expectThrows(IndexOutOfBoundsException.class, () -> out.writeBytes(new byte[] {}, 0, 1));
         out.close();
     }
 
@@ -278,38 +276,37 @@ public class BytesStreamsTests extends ESTestCase {
         out.writeOptionalVLong(null);
         out.writeFloat(1.1f);
         out.writeDouble(2.2);
-        int[] intArray = {1, 2, 3};
+        int[] intArray = { 1, 2, 3 };
         out.writeGenericValue(intArray);
-        int[] vIntArray = {4, 5, 6};
+        int[] vIntArray = { 4, 5, 6 };
         out.writeVIntArray(vIntArray);
-        long[] longArray = {1, 2, 3};
+        long[] longArray = { 1, 2, 3 };
         out.writeGenericValue(longArray);
-        long[] vLongArray = {4, 5, 6};
+        long[] vLongArray = { 4, 5, 6 };
         out.writeVLongArray(vLongArray);
-        float[] floatArray = {1.1f, 2.2f, 3.3f};
+        float[] floatArray = { 1.1f, 2.2f, 3.3f };
         out.writeGenericValue(floatArray);
-        double[] doubleArray = {1.1, 2.2, 3.3};
+        double[] doubleArray = { 1.1, 2.2, 3.3 };
         out.writeGenericValue(doubleArray);
         out.writeString("hello");
         out.writeString("goodbye");
         out.writeGenericValue(BytesRefs.toBytesRef("bytesref"));
-        out.writeStringArray(new String[] {"a", "b", "cat"});
+        out.writeStringArray(new String[] { "a", "b", "cat" });
         out.writeBytesReference(new BytesArray("test"));
         out.writeOptionalBytesReference(new BytesArray("test"));
         out.writeOptionalDouble(null);
         out.writeOptionalDouble(1.2);
-        out.writeTimeZone(DateTimeZone.forID("CET"));
-        out.writeOptionalTimeZone(DateTimeZone.getDefault());
-        out.writeOptionalTimeZone(null);
-        out.writeGenericValue(new DateTime(123456, DateTimeZone.forID("America/Los_Angeles")));
+        out.writeZoneId(ZoneId.of("CET"));
+        out.writeOptionalZoneId(ZoneId.systemDefault());
+        out.writeGenericValue(ZonedDateTime.ofInstant(Instant.ofEpochMilli(123456), ZoneId.of("America/Los_Angeles")));
         final OffsetTime offsetNow = OffsetTime.now(randomZone());
         out.writeGenericValue(offsetNow);
         final byte[] bytes = BytesReference.toBytes(out.bytes());
         StreamInput in = StreamInput.wrap(BytesReference.toBytes(out.bytes()));
         assertEquals(in.available(), bytes.length);
         assertThat(in.readBoolean(), equalTo(false));
-        assertThat(in.readByte(), equalTo((byte)1));
-        assertThat(in.readShort(), equalTo((short)-1));
+        assertThat(in.readByte(), equalTo((byte) 1));
+        assertThat(in.readShort(), equalTo((short) -1));
         assertThat(in.readInt(), equalTo(-1));
         assertThat(in.readVInt(), equalTo(2));
         assertThat(in.readLong(), equalTo(-3L));
@@ -317,30 +314,29 @@ public class BytesStreamsTests extends ESTestCase {
         assertThat(in.readOptionalLong(), equalTo(11234234L));
         assertThat(in.readOptionalVLong(), equalTo(5L));
         assertThat(in.readOptionalVLong(), nullValue());
-        assertThat((double)in.readFloat(), closeTo(1.1, 0.0001));
+        assertThat((double) in.readFloat(), closeTo(1.1, 0.0001));
         assertThat(in.readDouble(), closeTo(2.2, 0.0001));
         assertThat(in.readGenericValue(), equalTo((Object) intArray));
         assertThat(in.readVIntArray(), equalTo(vIntArray));
-        assertThat(in.readGenericValue(), equalTo((Object)longArray));
+        assertThat(in.readGenericValue(), equalTo((Object) longArray));
         assertThat(in.readVLongArray(), equalTo(vLongArray));
-        assertThat(in.readGenericValue(), equalTo((Object)floatArray));
-        assertThat(in.readGenericValue(), equalTo((Object)doubleArray));
+        assertThat(in.readGenericValue(), equalTo((Object) floatArray));
+        assertThat(in.readGenericValue(), equalTo((Object) doubleArray));
         assertThat(in.readString(), equalTo("hello"));
         assertThat(in.readString(), equalTo("goodbye"));
-        assertThat(in.readGenericValue(), equalTo((Object)BytesRefs.toBytesRef("bytesref")));
-        assertThat(in.readStringArray(), equalTo(new String[] {"a", "b", "cat"}));
+        assertThat(in.readGenericValue(), equalTo((Object) BytesRefs.toBytesRef("bytesref")));
+        assertThat(in.readStringArray(), equalTo(new String[] { "a", "b", "cat" }));
         assertThat(in.readBytesReference(), equalTo(new BytesArray("test")));
         assertThat(in.readOptionalBytesReference(), equalTo(new BytesArray("test")));
         assertNull(in.readOptionalDouble());
         assertThat(in.readOptionalDouble(), closeTo(1.2, 0.0001));
-        assertEquals(DateTimeZone.forID("CET"), in.readTimeZone());
-        assertEquals(DateTimeZone.getDefault(), in.readOptionalTimeZone());
-        assertNull(in.readOptionalTimeZone());
+        assertEquals(ZoneId.of("CET"), in.readZoneId());
+        assertEquals(ZoneId.systemDefault(), in.readOptionalZoneId());
         Object dt = in.readGenericValue();
-        assertThat(dt, instanceOf(JodaCompatibleZonedDateTime.class));
-        JodaCompatibleZonedDateTime jdt = (JodaCompatibleZonedDateTime) dt;
-        assertThat(jdt.getZonedDateTime().toInstant().toEpochMilli(), equalTo(123456L));
-        assertThat(jdt.getZonedDateTime().getZone(), equalTo(ZoneId.of("America/Los_Angeles")));
+        assertThat(dt, instanceOf(ZonedDateTime.class));
+        ZonedDateTime zdt = (ZonedDateTime) dt;
+        assertThat(zdt.toInstant().toEpochMilli(), equalTo(123456L));
+        assertThat(zdt.getZone(), equalTo(ZoneId.of("America/Los_Angeles")));
         assertThat(in.readGenericValue(), equalTo(offsetNow));
         assertEquals(0, in.available());
         IllegalArgumentException ex = expectThrows(IllegalArgumentException.class, () -> out.writeGenericValue(new Object() {
@@ -356,10 +352,15 @@ public class BytesStreamsTests extends ESTestCase {
 
     public void testNamedWriteable() throws IOException {
         try (BytesStreamOutput out = new BytesStreamOutput()) {
-            NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(Collections.singletonList(
-                    new NamedWriteableRegistry.Entry(BaseNamedWriteable.class, TestNamedWriteable.NAME, TestNamedWriteable::new)));
-            TestNamedWriteable namedWriteableIn = new TestNamedWriteable(randomAlphaOfLengthBetween(1, 10),
-                    randomAlphaOfLengthBetween(1, 10));
+            NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(
+                Collections.singletonList(
+                    new NamedWriteableRegistry.Entry(BaseNamedWriteable.class, TestNamedWriteable.NAME, TestNamedWriteable::new)
+                )
+            );
+            TestNamedWriteable namedWriteableIn = new TestNamedWriteable(
+                randomAlphaOfLengthBetween(1, 10),
+                randomAlphaOfLengthBetween(1, 10)
+            );
             out.writeNamedWriteable(namedWriteableIn);
             byte[] bytes = BytesReference.toBytes(out.bytes());
 
@@ -373,9 +374,11 @@ public class BytesStreamsTests extends ESTestCase {
     }
 
     public void testNamedWriteableList() throws IOException {
-        NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(Collections.singletonList(
-            new NamedWriteableRegistry.Entry(BaseNamedWriteable.class, TestNamedWriteable.NAME, TestNamedWriteable::new)
-        ));
+        NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(
+            Collections.singletonList(
+                new NamedWriteableRegistry.Entry(BaseNamedWriteable.class, TestNamedWriteable.NAME, TestNamedWriteable::new)
+            )
+        );
         int size = between(0, 100);
         List<BaseNamedWriteable> expected = new ArrayList<>(size);
         for (int i = 0; i < size; i++) {
@@ -403,16 +406,21 @@ public class BytesStreamsTests extends ESTestCase {
 
     public void testNamedWriteableReaderReturnsNull() throws IOException {
         try (BytesStreamOutput out = new BytesStreamOutput()) {
-            NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(Collections.singletonList(
-                    new NamedWriteableRegistry.Entry(BaseNamedWriteable.class, TestNamedWriteable.NAME, (StreamInput in) -> null)));
-            TestNamedWriteable namedWriteableIn = new TestNamedWriteable(randomAlphaOfLengthBetween(1, 10),
-                    randomAlphaOfLengthBetween(1, 10));
+            NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(
+                Collections.singletonList(
+                    new NamedWriteableRegistry.Entry(BaseNamedWriteable.class, TestNamedWriteable.NAME, (StreamInput in) -> null)
+                )
+            );
+            TestNamedWriteable namedWriteableIn = new TestNamedWriteable(
+                randomAlphaOfLengthBetween(1, 10),
+                randomAlphaOfLengthBetween(1, 10)
+            );
             out.writeNamedWriteable(namedWriteableIn);
             byte[] bytes = BytesReference.toBytes(out.bytes());
             try (StreamInput in = new NamedWriteableAwareStreamInput(StreamInput.wrap(bytes), namedWriteableRegistry)) {
                 assertEquals(in.available(), bytes.length);
-                IOException e = expectThrows(IOException.class, () -> in.readNamedWriteable(BaseNamedWriteable.class));
-                assertThat(e.getMessage(), endsWith("] returned null which is not allowed and probably means it screwed up the stream."));
+                AssertionError e = expectThrows(AssertionError.class, () -> in.readNamedWriteable(BaseNamedWriteable.class));
+                assertThat(e.getCause().getMessage(), endsWith("] returned null which is not allowed."));
             }
         }
     }
@@ -421,30 +429,40 @@ public class BytesStreamsTests extends ESTestCase {
         try (BytesStreamOutput out = new BytesStreamOutput()) {
             out.writeOptionalWriteable(new TestNamedWriteable(randomAlphaOfLengthBetween(1, 10), randomAlphaOfLengthBetween(1, 10)));
             StreamInput in = StreamInput.wrap(BytesReference.toBytes(out.bytes()));
-            IOException e = expectThrows(IOException.class, () -> in.readOptionalWriteable((StreamInput ignored) -> null));
-            assertThat(e.getMessage(), endsWith("] returned null which is not allowed and probably means it screwed up the stream."));
+            AssertionError e = expectThrows(AssertionError.class, () -> in.readOptionalWriteable((StreamInput ignored) -> null));
+            assertThat(e.getCause().getMessage(), endsWith("] returned null which is not allowed."));
         }
     }
 
     public void testWriteableReaderReturnsWrongName() throws IOException {
         try (BytesStreamOutput out = new BytesStreamOutput()) {
             NamedWriteableRegistry namedWriteableRegistry = new NamedWriteableRegistry(
-                    Collections.singletonList(new NamedWriteableRegistry.Entry(BaseNamedWriteable.class, TestNamedWriteable.NAME,
-                            (StreamInput in) -> new TestNamedWriteable(in) {
-                                @Override
-                                public String getWriteableName() {
-                                    return "intentionally-broken";
-                                }
-                            })));
-            TestNamedWriteable namedWriteableIn = new TestNamedWriteable(randomAlphaOfLengthBetween(1, 10),
-                    randomAlphaOfLengthBetween(1, 10));
+                Collections.singletonList(
+                    new NamedWriteableRegistry.Entry(
+                        BaseNamedWriteable.class,
+                        TestNamedWriteable.NAME,
+                        (StreamInput in) -> new TestNamedWriteable(in) {
+                            @Override
+                            public String getWriteableName() {
+                                return "intentionally-broken";
+                            }
+                        }
+                    )
+                )
+            );
+            TestNamedWriteable namedWriteableIn = new TestNamedWriteable(
+                randomAlphaOfLengthBetween(1, 10),
+                randomAlphaOfLengthBetween(1, 10)
+            );
             out.writeNamedWriteable(namedWriteableIn);
             byte[] bytes = BytesReference.toBytes(out.bytes());
             try (StreamInput in = new NamedWriteableAwareStreamInput(StreamInput.wrap(bytes), namedWriteableRegistry)) {
                 assertEquals(in.available(), bytes.length);
                 AssertionError e = expectThrows(AssertionError.class, () -> in.readNamedWriteable(BaseNamedWriteable.class));
-                assertThat(e.getMessage(),
-                        endsWith(" claims to have a different name [intentionally-broken] than it was read from [test-named-writeable]."));
+                assertThat(
+                    e.getMessage(),
+                    endsWith(" claims to have a different name [intentionally-broken] than it was read from [test-named-writeable].")
+                );
             }
         }
     }
@@ -458,7 +476,7 @@ public class BytesStreamsTests extends ESTestCase {
         }
 
         final BytesStreamOutput out = new BytesStreamOutput();
-        out.writeList(expected);
+        out.writeCollection(expected);
 
         final StreamInput in = StreamInput.wrap(BytesReference.toBytes(out.bytes()));
 
@@ -478,7 +496,7 @@ public class BytesStreamsTests extends ESTestCase {
 
     public void testWriteMap() throws IOException {
         final int size = randomIntBetween(0, 100);
-        final Map<String, String> expected = new HashMap<>(randomIntBetween(0, 100));
+        final Map<String, String> expected = Maps.newMapWithExpectedSize(size);
         for (int i = 0; i < size; ++i) {
             expected.put(randomAlphaOfLength(2), randomAlphaOfLength(5));
         }
@@ -503,7 +521,7 @@ public class BytesStreamsTests extends ESTestCase {
         final BytesStreamOutput out = new BytesStreamOutput();
         out.writeMap(expected, StreamOutput::writeString, StreamOutput::writeString);
         final StreamInput in = StreamInput.wrap(BytesReference.toBytes(out.bytes()));
-        final ImmutableOpenMap<String, String> loaded = in.readImmutableMap(StreamInput::readString, StreamInput::readString);
+        final ImmutableOpenMap<String, String> loaded = in.readImmutableOpenMap(StreamInput::readString, StreamInput::readString);
 
         assertThat(expected, equalTo(loaded));
     }
@@ -519,14 +537,14 @@ public class BytesStreamsTests extends ESTestCase {
         final BytesStreamOutput out = new BytesStreamOutput();
         out.writeMap(expected);
         final StreamInput in = StreamInput.wrap(BytesReference.toBytes(out.bytes()));
-        final ImmutableOpenMap<TestWriteable, TestWriteable> loaded = in.readImmutableMap(TestWriteable::new, TestWriteable::new);
+        final ImmutableOpenMap<TestWriteable, TestWriteable> loaded = in.readImmutableOpenMap(TestWriteable::new, TestWriteable::new);
 
         assertThat(expected, equalTo(loaded));
     }
 
     public void testWriteMapOfLists() throws IOException {
         final int size = randomIntBetween(0, 5);
-        final Map<String, List<String>> expected = new HashMap<>(size);
+        final Map<String, List<String>> expected = Maps.newMapWithExpectedSize(size);
 
         for (int i = 0; i < size; ++i) {
             int listSize = randomIntBetween(0, 5);
@@ -544,7 +562,7 @@ public class BytesStreamsTests extends ESTestCase {
 
         final StreamInput in = StreamInput.wrap(BytesReference.toBytes(out.bytes()));
 
-        final Map<String, List<String>> loaded = in.readMapOfLists(StreamInput::readString, StreamInput::readString);
+        final Map<String, List<String>> loaded = in.readMapOfLists(StreamInput::readString);
 
         assertThat(loaded.size(), equalTo(expected.size()));
 
@@ -564,6 +582,23 @@ public class BytesStreamsTests extends ESTestCase {
 
         in.close();
         out.close();
+    }
+
+    public void testWriteMapAsList() throws IOException {
+        final int size = randomIntBetween(0, 100);
+        final Map<String, String> expected = Maps.newMapWithExpectedSize(size);
+        for (int i = 0; i < size; ++i) {
+            final String value = randomAlphaOfLength(5);
+            expected.put("key_" + value, value);
+        }
+
+        final BytesStreamOutput out = new BytesStreamOutput();
+        out.writeMapValues(expected, StreamOutput::writeString);
+        final StreamInput in = StreamInput.wrap(BytesReference.toBytes(out.bytes()));
+        final Map<String, String> loaded = in.readMapValues(StreamInput::readString, value -> "key_" + value);
+
+        assertThat(loaded.size(), equalTo(expected.size()));
+        assertThat(expected, equalTo(loaded));
     }
 
     private abstract static class BaseNamedWriteable implements NamedWriteable {
@@ -603,8 +638,7 @@ public class BytesStreamsTests extends ESTestCase {
             if (this == o) return true;
             if (o == null || getClass() != o.getClass()) return false;
             TestNamedWriteable that = (TestNamedWriteable) o;
-            return Objects.equals(field1, that.field1) &&
-                    Objects.equals(field2, that.field2);
+            return Objects.equals(field1, that.field1) && Objects.equals(field2, that.field2);
         }
 
         @Override
@@ -667,16 +701,18 @@ public class BytesStreamsTests extends ESTestCase {
     }
 
     public void testWriteMapWithConsistentOrder() throws IOException {
-        Map<String, String> map =
-            randomMap(new TreeMap<>(), randomIntBetween(2, 20),
-                () -> randomAlphaOfLength(5),
-                () -> randomAlphaOfLength(5));
+        Map<String, String> map = randomMap(
+            new TreeMap<>(),
+            randomIntBetween(2, 20),
+            () -> randomAlphaOfLength(5),
+            () -> randomAlphaOfLength(5)
+        );
 
         Map<String, Object> reverseMap = new TreeMap<>(Collections.reverseOrder());
         reverseMap.putAll(map);
 
-        List<String> mapKeys = map.entrySet().stream().map(Map.Entry::getKey).collect(Collectors.toList());
-        List<String> reverseMapKeys = reverseMap.entrySet().stream().map(Map.Entry::getKey).collect(Collectors.toList());
+        List<String> mapKeys = map.entrySet().stream().map(Map.Entry::getKey).toList();
+        List<String> reverseMapKeys = reverseMap.entrySet().stream().map(Map.Entry::getKey).toList();
 
         assertNotEquals(mapKeys, reverseMapKeys);
 
@@ -689,10 +725,12 @@ public class BytesStreamsTests extends ESTestCase {
     }
 
     public void testReadMapByUsingWriteMapWithConsistentOrder() throws IOException {
-        Map<String, String> streamOutMap =
-            randomMap(new HashMap<>(), randomIntBetween(2, 20),
-                () -> randomAlphaOfLength(5),
-                () -> randomAlphaOfLength(5));
+        Map<String, String> streamOutMap = randomMap(
+            new HashMap<>(),
+            randomIntBetween(2, 20),
+            () -> randomAlphaOfLength(5),
+            () -> randomAlphaOfLength(5)
+        );
         try (BytesStreamOutput streamOut = new BytesStreamOutput()) {
             streamOut.writeMapWithConsistentOrder(streamOutMap);
             StreamInput in = StreamInput.wrap(BytesReference.toBytes(streamOut.bytes()));
@@ -754,17 +792,17 @@ public class BytesStreamsTests extends ESTestCase {
     public void testReadTooLargeArraySize() throws IOException {
         try (BytesStreamOutput output = new BytesStreamOutput(0)) {
             output.writeVInt(10);
-            for (int i = 0; i < 10; i ++) {
+            for (int i = 0; i < 10; i++) {
                 output.writeInt(i);
             }
 
             output.writeVInt(Integer.MAX_VALUE);
-            for (int i = 0; i < 10; i ++) {
+            for (int i = 0; i < 10; i++) {
                 output.writeInt(i);
             }
             try (StreamInput streamInput = output.bytes().streamInput()) {
                 int[] ints = streamInput.readIntArray();
-                for (int i = 0; i < 10; i ++) {
+                for (int i = 0; i < 10; i++) {
                     assertEquals(i, ints[i]);
                 }
                 expectThrows(IllegalStateException.class, () -> streamInput.readIntArray());
@@ -775,21 +813,21 @@ public class BytesStreamsTests extends ESTestCase {
     public void testReadCorruptedArraySize() throws IOException {
         try (BytesStreamOutput output = new BytesStreamOutput(0)) {
             output.writeVInt(10);
-            for (int i = 0; i < 10; i ++) {
+            for (int i = 0; i < 10; i++) {
                 output.writeInt(i);
             }
 
             output.writeVInt(100);
-            for (int i = 0; i < 10; i ++) {
+            for (int i = 0; i < 10; i++) {
                 output.writeInt(i);
             }
             try (StreamInput streamInput = output.bytes().streamInput()) {
                 int[] ints = streamInput.readIntArray();
-                for (int i = 0; i < 10; i ++) {
+                for (int i = 0; i < 10; i++) {
                     assertEquals(i, ints[i]);
                 }
                 EOFException eofException = expectThrows(EOFException.class, () -> streamInput.readIntArray());
-                assertEquals("tried to read: 100 bytes but this stream is limited to: 82", eofException.getMessage());
+                assertEquals("tried to read: 100 bytes but only 40 remaining", eofException.getMessage());
             }
         }
     }
@@ -797,17 +835,17 @@ public class BytesStreamsTests extends ESTestCase {
     public void testReadNegativeArraySize() throws IOException {
         try (BytesStreamOutput output = new BytesStreamOutput(0)) {
             output.writeVInt(10);
-            for (int i = 0; i < 10; i ++) {
+            for (int i = 0; i < 10; i++) {
                 output.writeInt(i);
             }
 
             output.writeVInt(Integer.MIN_VALUE);
-            for (int i = 0; i < 10; i ++) {
+            for (int i = 0; i < 10; i++) {
                 output.writeInt(i);
             }
             try (StreamInput streamInput = output.bytes().streamInput()) {
                 int[] ints = streamInput.readIntArray();
-                for (int i = 0; i < 10; i ++) {
+                for (int i = 0; i < 10; i++) {
                     assertEquals(i, ints[i]);
                 }
                 NegativeArraySizeException exception = expectThrows(NegativeArraySizeException.class, () -> streamInput.readIntArray());
@@ -904,30 +942,5 @@ public class BytesStreamsTests extends ESTestCase {
         BytesStreamOutput out = new BytesStreamOutput();
         out.writeZLong(timeValue.duration());
         assertEqualityAfterSerialize(timeValue, 1 + out.bytes().length());
-    }
-
-    public void testWriteCircularReferenceException() throws IOException {
-        IOException rootEx = new IOException("disk broken");
-        AlreadyClosedException ace = new AlreadyClosedException("closed", rootEx);
-        rootEx.addSuppressed(ace); // circular reference
-
-        BytesStreamOutput testOut = new BytesStreamOutput();
-        AssertionError error = expectThrows(AssertionError.class, () -> testOut.writeException(rootEx));
-        assertThat(error.getMessage(), containsString("too many nested exceptions"));
-        assertThat(error.getCause(), equalTo(rootEx));
-
-        BytesStreamOutput prodOut = new BytesStreamOutput() {
-            @Override
-            boolean failOnTooManyNestedExceptions(Throwable throwable) {
-                assertThat(throwable, sameInstance(rootEx));
-                return true;
-            }
-        };
-        prodOut.writeException(rootEx);
-        StreamInput in = prodOut.bytes().streamInput();
-        Exception newEx = in.readException();
-        assertThat(newEx, instanceOf(IOException.class));
-        assertThat(newEx.getMessage(), equalTo("disk broken"));
-        assertArrayEquals(newEx.getStackTrace(), rootEx.getStackTrace());
     }
 }
