@@ -20,8 +20,6 @@ import org.junit.Before;
 import org.mockito.Mockito;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -31,11 +29,11 @@ import static org.elasticsearch.ingest.CompoundProcessor.ON_FAILURE_PROCESSOR_TA
 import static org.elasticsearch.ingest.CompoundProcessor.ON_FAILURE_PROCESSOR_TYPE_FIELD;
 import static org.elasticsearch.ingest.PipelineProcessorTests.createIngestService;
 import static org.elasticsearch.ingest.TrackingResultProcessor.decorate;
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.nullValue;
 import static org.hamcrest.Matchers.sameInstance;
 import static org.mockito.Mockito.verify;
@@ -48,7 +46,7 @@ public class TrackingResultProcessorTests extends ESTestCase {
 
     @Before
     public void init() {
-        ingestDocument = new IngestDocument(new HashMap<>(), new HashMap<>());
+        ingestDocument = TestIngestDocument.emptyIngestDocument();
         resultList = new ArrayList<>();
     }
 
@@ -57,8 +55,13 @@ public class TrackingResultProcessorTests extends ESTestCase {
         TrackingResultProcessor trackingProcessor = new TrackingResultProcessor(false, actualProcessor, null, resultList);
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedResult = new SimulateProcessorResult(actualProcessor.getType(), actualProcessor.getTag(),
-            actualProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedResult = new SimulateProcessorResult(
+            actualProcessor.getType(),
+            actualProcessor.getTag(),
+            actualProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
 
         assertThat(actualProcessor.getInvokedCounter(), equalTo(1));
         assertThat(resultList.size(), equalTo(1));
@@ -78,8 +81,13 @@ public class TrackingResultProcessorTests extends ESTestCase {
         trackingProcessor.execute(ingestDocument, (result, e) -> holder[0] = e);
         assertThat(((IngestProcessorException) holder[0]).getRootCause().getMessage(), equalTo(exception.getMessage()));
 
-        SimulateProcessorResult expectedFirstResult = new SimulateProcessorResult(testProcessor.getType(), testProcessor.getTag(),
-            actualProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedFirstResult = new SimulateProcessorResult(
+            testProcessor.getType(),
+            testProcessor.getTag(),
+            actualProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
         assertThat(testProcessor.getInvokedCounter(), equalTo(1));
         assertThat(resultList.size(), equalTo(1));
         assertThat(resultList.get(0).getIngestDocument(), nullValue());
@@ -91,18 +99,28 @@ public class TrackingResultProcessorTests extends ESTestCase {
         RuntimeException exception = new RuntimeException("fail");
         TestProcessor failProcessor = new TestProcessor("fail", "test", null, exception);
         TestProcessor onFailureProcessor = new TestProcessor("success", "test", null, ingestDocument -> {});
-        CompoundProcessor actualProcessor = new CompoundProcessor(false,
-            Arrays.asList(new CompoundProcessor(false,
-                Arrays.asList(failProcessor, onFailureProcessor),
-                Arrays.asList(onFailureProcessor, failProcessor))),
-            Arrays.asList(onFailureProcessor));
+        CompoundProcessor actualProcessor = new CompoundProcessor(
+            false,
+            List.of(new CompoundProcessor(false, List.of(failProcessor, onFailureProcessor), List.of(onFailureProcessor, failProcessor))),
+            List.of(onFailureProcessor)
+        );
         CompoundProcessor trackingProcessor = decorate(actualProcessor, null, resultList);
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedFailResult = new SimulateProcessorResult(failProcessor.getType(), failProcessor.getTag(),
-            failProcessor.getDescription(), ingestDocument, null);
-        SimulateProcessorResult expectedSuccessResult = new SimulateProcessorResult(onFailureProcessor.getType(),
-            onFailureProcessor.getTag(), failProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedFailResult = new SimulateProcessorResult(
+            failProcessor.getType(),
+            failProcessor.getTag(),
+            failProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
+        SimulateProcessorResult expectedSuccessResult = new SimulateProcessorResult(
+            onFailureProcessor.getType(),
+            onFailureProcessor.getTag(),
+            failProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
 
         assertThat(failProcessor.getInvokedCounter(), equalTo(2));
         assertThat(onFailureProcessor.getInvokedCounter(), equalTo(2));
@@ -133,30 +151,40 @@ public class TrackingResultProcessorTests extends ESTestCase {
 
     public void testActualCompoundProcessorWithOnFailureAndTrueCondition() throws Exception {
         String scriptName = "conditionalScript";
-        ScriptService scriptService = new ScriptService(Settings.builder().build(), Collections.singletonMap(Script.DEFAULT_SCRIPT_LANG,
-            new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Collections.singletonMap(scriptName, ctx -> true), Collections.emptyMap())),
-            new HashMap<>(ScriptModule.CORE_CONTEXTS)
+        ScriptService scriptService = new ScriptService(
+            Settings.builder().build(),
+            Map.of(Script.DEFAULT_SCRIPT_LANG, new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Map.of(scriptName, ctx -> true), Map.of())),
+            new HashMap<>(ScriptModule.CORE_CONTEXTS),
+            () -> 1L
         );
         RuntimeException exception = new RuntimeException("fail");
         TestProcessor failProcessor = new TestProcessor("fail", "test", null, exception);
         ConditionalProcessor conditionalProcessor = new ConditionalProcessor(
             randomAlphaOfLength(10),
             null,
-            new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Collections.emptyMap()), scriptService,
-            failProcessor);
+            new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Map.of()),
+            scriptService,
+            failProcessor
+        );
         TestProcessor onFailureProcessor = new TestProcessor("success", "test", null, ingestDocument -> {});
-        CompoundProcessor actualProcessor =
-            new CompoundProcessor(false,
-                Arrays.asList(conditionalProcessor),
-                Arrays.asList(onFailureProcessor));
+        CompoundProcessor actualProcessor = new CompoundProcessor(false, List.of(conditionalProcessor), List.of(onFailureProcessor));
         CompoundProcessor trackingProcessor = decorate(actualProcessor, null, resultList);
-        trackingProcessor.execute(ingestDocument, (result, e) -> {
-        });
+        trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedFailResult = new SimulateProcessorResult(failProcessor.getType(), failProcessor.getTag(),
-            failProcessor.getDescription(), ingestDocument, null);
-        SimulateProcessorResult expectedSuccessResult = new SimulateProcessorResult(onFailureProcessor.getType(),
-            onFailureProcessor.getTag(), onFailureProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedFailResult = new SimulateProcessorResult(
+            failProcessor.getType(),
+            failProcessor.getTag(),
+            failProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
+        SimulateProcessorResult expectedSuccessResult = new SimulateProcessorResult(
+            onFailureProcessor.getType(),
+            onFailureProcessor.getTag(),
+            onFailureProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
 
         assertThat(failProcessor.getInvokedCounter(), equalTo(1));
         assertThat(onFailureProcessor.getInvokedCounter(), equalTo(1));
@@ -177,18 +205,21 @@ public class TrackingResultProcessorTests extends ESTestCase {
         assertThat(resultList.get(1).getProcessorTag(), equalTo(expectedSuccessResult.getProcessorTag()));
     }
 
-
     public void testActualCompoundProcessorWithIgnoreFailure() throws Exception {
         RuntimeException exception = new RuntimeException("processor failed");
         TestProcessor testProcessor = new TestProcessor(ingestDocument -> { throw exception; });
-        CompoundProcessor actualProcessor = new CompoundProcessor(true, Collections.singletonList(testProcessor),
-            Collections.emptyList());
+        CompoundProcessor actualProcessor = new CompoundProcessor(true, List.of(testProcessor), List.of());
         CompoundProcessor trackingProcessor = decorate(actualProcessor, null, resultList);
 
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedResult = new SimulateProcessorResult(testProcessor.getType(), testProcessor.getTag(),
-            testProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedResult = new SimulateProcessorResult(
+            testProcessor.getType(),
+            testProcessor.getTag(),
+            testProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
         assertThat(testProcessor.getInvokedCounter(), equalTo(1));
         assertThat(resultList.size(), equalTo(1));
         assertThat(resultList.get(0).getIngestDocument(), equalTo(expectedResult.getIngestDocument()));
@@ -202,24 +233,40 @@ public class TrackingResultProcessorTests extends ESTestCase {
         String key3 = randomAlphaOfLength(10);
 
         String scriptName = "conditionalScript";
-        ScriptService scriptService = new ScriptService(Settings.builder().build(), Collections.singletonMap(Script.DEFAULT_SCRIPT_LANG,
-            new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Collections.singletonMap(scriptName, ctx -> false), Collections.emptyMap())),
-            new HashMap<>(ScriptModule.CORE_CONTEXTS)
+        ScriptService scriptService = new ScriptService(
+            Settings.builder().build(),
+            Map.of(
+                Script.DEFAULT_SCRIPT_LANG,
+                new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Map.of(scriptName, ctx -> false), Map.of())
+            ),
+            new HashMap<>(ScriptModule.CORE_CONTEXTS),
+            () -> 1L
         );
 
-        CompoundProcessor compoundProcessor = new CompoundProcessor(
-            new TestProcessor(ingestDocument -> {ingestDocument.setFieldValue(key1, randomInt()); }),
+        CompoundProcessor compoundProcessor = new CompoundProcessor(new TestProcessor(ingestDocument -> {
+            ingestDocument.setFieldValue(key1, randomInt());
+        }),
             new ConditionalProcessor(
                 randomAlphaOfLength(10),
                 null,
-                new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Collections.emptyMap()), scriptService,
-                new TestProcessor(ingestDocument -> {ingestDocument.setFieldValue(key2, randomInt()); })),
-            new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key3, randomInt()); }));
+                new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Map.of()),
+                scriptService,
+                new TestProcessor(ingestDocument -> {
+                    ingestDocument.setFieldValue(key2, randomInt());
+                })
+            ),
+            new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key3, randomInt()); })
+        );
 
         CompoundProcessor trackingProcessor = decorate(compoundProcessor, null, resultList);
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
-        SimulateProcessorResult expectedResult = new SimulateProcessorResult(compoundProcessor.getType(), compoundProcessor.getTag(),
-            compoundProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedResult = new SimulateProcessorResult(
+            compoundProcessor.getType(),
+            compoundProcessor.getTag(),
+            compoundProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
 
         assertThat(resultList.size(), equalTo(3));
 
@@ -250,26 +297,30 @@ public class TrackingResultProcessorTests extends ESTestCase {
         String key2 = randomAlphaOfLength(10);
         String key3 = randomAlphaOfLength(10);
 
-        Pipeline pipeline = new Pipeline(
-            pipelineId, null, null, new CompoundProcessor(
-            new TestProcessor(ingestDocument -> {ingestDocument.setFieldValue(key1, randomInt()); }),
-            new TestProcessor(ingestDocument -> {ingestDocument.setFieldValue(key2, randomInt()); }),
-            new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key3, randomInt()); }))
-        );
+        Pipeline pipeline = new Pipeline(pipelineId, null, null, null, new CompoundProcessor(new TestProcessor(ingestDocument -> {
+            ingestDocument.setFieldValue(key1, randomInt());
+        }), new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key2, randomInt()); }), new TestProcessor(ingestDocument -> {
+            ingestDocument.setFieldValue(key3, randomInt());
+        })));
         when(ingestService.getPipeline(pipelineId)).thenReturn(pipeline);
 
-        PipelineProcessor pipelineProcessor = factory.create(Collections.emptyMap(), null, null, pipelineConfig);
+        PipelineProcessor pipelineProcessor = factory.create(Map.of(), null, null, pipelineConfig);
         CompoundProcessor actualProcessor = new CompoundProcessor(pipelineProcessor);
 
         CompoundProcessor trackingProcessor = decorate(actualProcessor, null, resultList);
 
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedResult = new SimulateProcessorResult(actualProcessor.getType(), actualProcessor.getTag(),
-            actualProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedResult = new SimulateProcessorResult(
+            actualProcessor.getType(),
+            actualProcessor.getTag(),
+            actualProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
         expectedResult.getIngestDocument().getIngestMetadata().put("pipeline", pipelineId);
 
-        verify(ingestService,  Mockito.atLeast(1)).getPipeline(pipelineId);
+        verify(ingestService, Mockito.atLeast(1)).getPipeline(pipelineId);
 
         assertThat(resultList.size(), equalTo(4));
 
@@ -307,39 +358,49 @@ public class TrackingResultProcessorTests extends ESTestCase {
 
         String scriptName = "conditionalScript";
 
-        ScriptService scriptService = new ScriptService(Settings.builder().build(), Collections.singletonMap(Script.DEFAULT_SCRIPT_LANG,
-            new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Collections.singletonMap(scriptName, ctx -> true), Collections.emptyMap())),
-            new HashMap<>(ScriptModule.CORE_CONTEXTS)
+        ScriptService scriptService = new ScriptService(
+            Settings.builder().build(),
+            Map.of(Script.DEFAULT_SCRIPT_LANG, new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Map.of(scriptName, ctx -> true), Map.of())),
+            new HashMap<>(ScriptModule.CORE_CONTEXTS),
+            () -> 1L
         );
 
-        Pipeline pipeline1 = new Pipeline(
-            pipelineId1, null, null, new CompoundProcessor(
-            new TestProcessor(ingestDocument -> {ingestDocument.setFieldValue(key1, randomInt()); }),
+        Pipeline pipeline1 = new Pipeline(pipelineId1, null, null, null, new CompoundProcessor(new TestProcessor(ingestDocument -> {
+            ingestDocument.setFieldValue(key1, randomInt());
+        }),
             new ConditionalProcessor(
                 randomAlphaOfLength(10),
                 null,
-                new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Collections.emptyMap()), scriptService,
-                factory.create(Collections.emptyMap(), "pipeline1", null, pipelineConfig2)),
-            new TestProcessor(ingestDocument -> {ingestDocument.setFieldValue(key3, randomInt()); })
-        )
-        );
+                new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Map.of()),
+                scriptService,
+                factory.create(Map.of(), "pipeline1", null, pipelineConfig2)
+            ),
+            new TestProcessor(ingestDocument -> {
+                ingestDocument.setFieldValue(key3, randomInt());
+            })
+        ));
 
-        Pipeline pipeline2 = new Pipeline(
-            pipelineId2, null, null, new CompoundProcessor(
-                new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key2, randomInt()); })));
+        Pipeline pipeline2 = new Pipeline(pipelineId2, null, null, null, new CompoundProcessor(new TestProcessor(ingestDocument -> {
+            ingestDocument.setFieldValue(key2, randomInt());
+        })));
 
         when(ingestService.getPipeline(pipelineId1)).thenReturn(pipeline1);
         when(ingestService.getPipeline(pipelineId2)).thenReturn(pipeline2);
 
-        PipelineProcessor pipelineProcessor = factory.create(Collections.emptyMap(), "pipeline0", null, pipelineConfig0);
+        PipelineProcessor pipelineProcessor = factory.create(Map.of(), "pipeline0", null, pipelineConfig0);
         CompoundProcessor actualProcessor = new CompoundProcessor(pipelineProcessor);
 
         CompoundProcessor trackingProcessor = decorate(actualProcessor, null, resultList);
 
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedResult = new SimulateProcessorResult(actualProcessor.getType(), actualProcessor.getTag(),
-            actualProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedResult = new SimulateProcessorResult(
+            actualProcessor.getType(),
+            actualProcessor.getTag(),
+            actualProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
         expectedResult.getIngestDocument().getIngestMetadata().put("pipeline", pipelineId1);
 
         verify(ingestService, Mockito.atLeast(1)).getPipeline(pipelineId1);
@@ -387,39 +448,52 @@ public class TrackingResultProcessorTests extends ESTestCase {
 
         String scriptName = "conditionalScript";
 
-        ScriptService scriptService = new ScriptService(Settings.builder().build(), Collections.singletonMap(Script.DEFAULT_SCRIPT_LANG,
-            new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Collections.singletonMap(scriptName, ctx -> false), Collections.emptyMap())),
-            new HashMap<>(ScriptModule.CORE_CONTEXTS)
+        ScriptService scriptService = new ScriptService(
+            Settings.builder().build(),
+            Map.of(
+                Script.DEFAULT_SCRIPT_LANG,
+                new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Map.of(scriptName, ctx -> false), Map.of())
+            ),
+            new HashMap<>(ScriptModule.CORE_CONTEXTS),
+            () -> 1L
         );
 
-        Pipeline pipeline1 = new Pipeline(
-            pipelineId1, null, null, new CompoundProcessor(
-            new TestProcessor(ingestDocument -> {ingestDocument.setFieldValue(key1, randomInt()); }),
+        Pipeline pipeline1 = new Pipeline(pipelineId1, null, null, null, new CompoundProcessor(new TestProcessor(ingestDocument -> {
+            ingestDocument.setFieldValue(key1, randomInt());
+        }),
             new ConditionalProcessor(
                 randomAlphaOfLength(10),
                 null,
-                new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Collections.emptyMap()), scriptService,
-                factory.create(Collections.emptyMap(), null, null, pipelineConfig2)),
-            new TestProcessor(ingestDocument -> {ingestDocument.setFieldValue(key3, randomInt()); })
-        )
-        );
+                new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Map.of()),
+                scriptService,
+                factory.create(Map.of(), null, null, pipelineConfig2)
+            ),
+            new TestProcessor(ingestDocument -> {
+                ingestDocument.setFieldValue(key3, randomInt());
+            })
+        ));
 
-        Pipeline pipeline2 = new Pipeline(
-            pipelineId2, null, null, new CompoundProcessor(
-            new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key2, randomInt()); })));
+        Pipeline pipeline2 = new Pipeline(pipelineId2, null, null, null, new CompoundProcessor(new TestProcessor(ingestDocument -> {
+            ingestDocument.setFieldValue(key2, randomInt());
+        })));
 
         when(ingestService.getPipeline(pipelineId1)).thenReturn(pipeline1);
         when(ingestService.getPipeline(pipelineId2)).thenReturn(pipeline2);
 
-        PipelineProcessor pipelineProcessor = factory.create(Collections.emptyMap(), null, null, pipelineConfig0);
+        PipelineProcessor pipelineProcessor = factory.create(Map.of(), null, null, pipelineConfig0);
         CompoundProcessor actualProcessor = new CompoundProcessor(pipelineProcessor);
 
         CompoundProcessor trackingProcessor = decorate(actualProcessor, null, resultList);
 
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedResult = new SimulateProcessorResult(actualProcessor.getType(), actualProcessor.getTag(),
-            actualProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedResult = new SimulateProcessorResult(
+            actualProcessor.getType(),
+            actualProcessor.getTag(),
+            actualProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
         expectedResult.getIngestDocument().getIngestMetadata().put("pipeline", pipelineId1);
 
         verify(ingestService, Mockito.atLeast(1)).getPipeline(pipelineId1);
@@ -455,27 +529,34 @@ public class TrackingResultProcessorTests extends ESTestCase {
         String key2 = randomAlphaOfLength(10);
         String key3 = randomAlphaOfLength(10);
 
-        Pipeline pipeline = new Pipeline(
-            pipelineId, null, null, new CompoundProcessor(
-            new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key1, randomInt()); }),
+        Pipeline pipeline = new Pipeline(pipelineId, null, null, null, new CompoundProcessor(new TestProcessor(ingestDocument -> {
+            ingestDocument.setFieldValue(key1, randomInt());
+        }),
             new CompoundProcessor(
                 false,
-                Collections.singletonList(new TestProcessor(ingestDocument -> { throw exception; })),
-                Collections.singletonList(new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key2, randomInt()); }))
+                List.of(new TestProcessor(ingestDocument -> { throw exception; })),
+                List.of(new TestProcessor(ingestDocument -> {
+                    ingestDocument.setFieldValue(key2, randomInt());
+                }))
             ),
-            new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key3, randomInt()); }))
-        );
+            new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key3, randomInt()); })
+        ));
         when(ingestService.getPipeline(pipelineId)).thenReturn(pipeline);
 
-        PipelineProcessor pipelineProcessor = factory.create(Collections.emptyMap(), null, null, pipelineConfig);
+        PipelineProcessor pipelineProcessor = factory.create(Map.of(), null, null, pipelineConfig);
         CompoundProcessor actualProcessor = new CompoundProcessor(pipelineProcessor);
 
         CompoundProcessor trackingProcessor = decorate(actualProcessor, null, resultList);
 
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedResult = new SimulateProcessorResult(actualProcessor.getType(), actualProcessor.getTag(),
-            actualProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedResult = new SimulateProcessorResult(
+            actualProcessor.getType(),
+            actualProcessor.getTag(),
+            actualProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
         expectedResult.getIngestDocument().getIngestMetadata().put("pipeline", pipelineId);
 
         verify(ingestService, Mockito.atLeast(2)).getPipeline(pipelineId);
@@ -488,7 +569,7 @@ public class TrackingResultProcessorTests extends ESTestCase {
         assertFalse(resultList.get(1).getIngestDocument().hasField(key2));
         assertFalse(resultList.get(1).getIngestDocument().hasField(key3));
 
-        //failed processor
+        // failed processor
         assertNull(resultList.get(2).getIngestDocument());
         assertThat(resultList.get(2).getFailure().getMessage(), equalTo(exception.getMessage()));
 
@@ -512,21 +593,33 @@ public class TrackingResultProcessorTests extends ESTestCase {
         IllegalStateException exception = new IllegalStateException("Not a pipeline cycle error");
 
         Pipeline pipeline = new Pipeline(
-            pipelineId, null, null, new CompoundProcessor(
-            new TestProcessor(ingestDocument -> ingestDocument.setFieldValue(key1, randomInt())),
-            new TestProcessor(ingestDocument -> { throw exception; }))
+            pipelineId,
+            null,
+            null,
+            null,
+            new CompoundProcessor(
+                new TestProcessor(ingestDocument -> ingestDocument.setFieldValue(key1, randomInt())),
+                new TestProcessor(ingestDocument -> {
+                    throw exception;
+                })
+            )
         );
         when(ingestService.getPipeline(pipelineId)).thenReturn(pipeline);
 
-        PipelineProcessor pipelineProcessor = factory.create(Collections.emptyMap(), null, null, pipelineConfig);
+        PipelineProcessor pipelineProcessor = factory.create(Map.of(), null, null, pipelineConfig);
         CompoundProcessor actualProcessor = new CompoundProcessor(pipelineProcessor);
 
         CompoundProcessor trackingProcessor = decorate(actualProcessor, null, resultList);
 
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedResult = new SimulateProcessorResult(actualProcessor.getType(), actualProcessor.getTag(),
-            actualProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedResult = new SimulateProcessorResult(
+            actualProcessor.getType(),
+            actualProcessor.getTag(),
+            actualProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
         expectedResult.getIngestDocument().getIngestMetadata().put("pipeline", pipelineId);
 
         verify(ingestService, Mockito.atLeast(1)).getPipeline(pipelineId);
@@ -551,15 +644,25 @@ public class TrackingResultProcessorTests extends ESTestCase {
         PipelineProcessor.Factory factory = new PipelineProcessor.Factory(ingestService);
 
         Pipeline pipeline1 = new Pipeline(
-            pipelineId1, null, null, new CompoundProcessor(factory.create(Collections.emptyMap(), null, null, pipelineConfig2)));
+            pipelineId1,
+            null,
+            null,
+            null,
+            new CompoundProcessor(factory.create(Map.of(), null, null, pipelineConfig2))
+        );
 
         Pipeline pipeline2 = new Pipeline(
-            pipelineId2, null, null, new CompoundProcessor(factory.create(Collections.emptyMap(), null, null, pipelineConfig1)));
+            pipelineId2,
+            null,
+            null,
+            null,
+            new CompoundProcessor(factory.create(Map.of(), null, null, pipelineConfig1))
+        );
 
         when(ingestService.getPipeline(pipelineId1)).thenReturn(pipeline1);
         when(ingestService.getPipeline(pipelineId2)).thenReturn(pipeline2);
 
-        PipelineProcessor pipelineProcessor = factory.create(Collections.emptyMap(), null, null, pipelineConfig0);
+        PipelineProcessor pipelineProcessor = factory.create(Map.of(), null, null, pipelineConfig0);
         CompoundProcessor actualProcessor = new CompoundProcessor(pipelineProcessor);
 
         CompoundProcessor trackingProcessor = decorate(actualProcessor, null, resultList);
@@ -579,11 +682,10 @@ public class TrackingResultProcessorTests extends ESTestCase {
         PipelineProcessor.Factory factory = new PipelineProcessor.Factory(ingestService);
 
         String key1 = randomAlphaOfLength(10);
-        PipelineProcessor pipelineProcessor = factory.create(Collections.emptyMap(), null, null, pipelineConfig);
-        Pipeline pipeline = new Pipeline(
-            pipelineId, null, null, new CompoundProcessor(
-            new TestProcessor(ingestDocument -> { ingestDocument.setFieldValue(key1, randomInt()); }))
-        );
+        PipelineProcessor pipelineProcessor = factory.create(Map.of(), null, null, pipelineConfig);
+        Pipeline pipeline = new Pipeline(pipelineId, null, null, null, new CompoundProcessor(new TestProcessor(ingestDocument -> {
+            ingestDocument.setFieldValue(key1, randomInt());
+        })));
         when(ingestService.getPipeline(pipelineId)).thenReturn(pipeline);
 
         // calls the same pipeline twice
@@ -593,11 +695,16 @@ public class TrackingResultProcessorTests extends ESTestCase {
 
         trackingProcessor.execute(ingestDocument, (result, e) -> {});
 
-        SimulateProcessorResult expectedResult = new SimulateProcessorResult(actualProcessor.getType(), actualProcessor.getTag(),
-            actualProcessor.getDescription(), ingestDocument, null);
+        SimulateProcessorResult expectedResult = new SimulateProcessorResult(
+            actualProcessor.getType(),
+            actualProcessor.getTag(),
+            actualProcessor.getDescription(),
+            ingestDocument,
+            null
+        );
         expectedResult.getIngestDocument().getIngestMetadata().put("pipeline", pipelineId);
 
-        verify(ingestService,  Mockito.atLeast(2)).getPipeline(pipelineId);
+        verify(ingestService, Mockito.atLeast(2)).getPipeline(pipelineId);
         assertThat(resultList.size(), equalTo(4));
 
         assertNull(resultList.get(0).getConditionalWithResult());
@@ -614,8 +721,10 @@ public class TrackingResultProcessorTests extends ESTestCase {
         assertThat(resultList.get(3).getFailure(), nullValue());
         assertThat(resultList.get(3).getProcessorTag(), nullValue());
 
-        //each invocation updates key1 with a random int
-        assertNotEquals(resultList.get(1).getIngestDocument().getSourceAndMetadata().get(key1),
-            resultList.get(3).getIngestDocument().getSourceAndMetadata().get(key1));
+        // each invocation updates key1 with a random int
+        assertNotEquals(
+            resultList.get(1).getIngestDocument().getSourceAndMetadata().get(key1),
+            resultList.get(3).getIngestDocument().getSourceAndMetadata().get(key1)
+        );
     }
 }
