@@ -6,14 +6,15 @@
  */
 package org.elasticsearch.xpack.core.security.action.user;
 
+import org.elasticsearch.TransportVersion;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
-import org.elasticsearch.common.xcontent.ToXContentObject;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.ToXContentObject;
+import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xpack.core.security.authz.RoleDescriptor;
 import org.elasticsearch.xpack.core.security.authz.permission.FieldPermissionsDefinition;
 import org.elasticsearch.xpack.core.security.authz.privilege.ConfigurableClusterPrivilege;
@@ -22,6 +23,7 @@ import org.elasticsearch.xpack.core.security.authz.privilege.ConfigurableCluster
 import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.TreeSet;
@@ -32,30 +34,41 @@ import java.util.stream.Collectors;
  */
 public final class GetUserPrivilegesResponse extends ActionResponse {
 
-    private Set<String> cluster;
-    private Set<ConfigurableClusterPrivilege> configurableClusterPrivileges;
-    private Set<Indices> index;
-    private Set<RoleDescriptor.ApplicationResourcePrivileges> application;
-    private Set<String> runAs;
+    private final Set<String> cluster;
+    private final Set<ConfigurableClusterPrivilege> configurableClusterPrivileges;
+    private final Set<Indices> index;
+    private final Set<RoleDescriptor.ApplicationResourcePrivileges> application;
+    private final Set<String> runAs;
+    private final Set<RemoteIndices> remoteIndex;
 
     public GetUserPrivilegesResponse(StreamInput in) throws IOException {
         super(in);
-        cluster = Collections.unmodifiableSet(in.readSet(StreamInput::readString));
-        configurableClusterPrivileges = Collections.unmodifiableSet(in.readSet(ConfigurableClusterPrivileges.READER));
-        index = Collections.unmodifiableSet(in.readSet(Indices::new));
-        application = Collections.unmodifiableSet(in.readSet(RoleDescriptor.ApplicationResourcePrivileges::new));
-        runAs = Collections.unmodifiableSet(in.readSet(StreamInput::readString));
+        cluster = in.readImmutableSet(StreamInput::readString);
+        configurableClusterPrivileges = in.readImmutableSet(ConfigurableClusterPrivileges.READER);
+        index = in.readImmutableSet(Indices::new);
+        application = in.readImmutableSet(RoleDescriptor.ApplicationResourcePrivileges::new);
+        runAs = in.readImmutableSet(StreamInput::readString);
+        if (in.getTransportVersion().onOrAfter(TransportVersion.V_8_8_0)) {
+            remoteIndex = in.readImmutableSet(RemoteIndices::new);
+        } else {
+            remoteIndex = Set.of();
+        }
     }
 
-    public GetUserPrivilegesResponse(Set<String> cluster, Set<ConfigurableClusterPrivilege> conditionalCluster,
-                                     Set<Indices> index,
-                                     Set<RoleDescriptor.ApplicationResourcePrivileges> application,
-                                     Set<String> runAs) {
+    public GetUserPrivilegesResponse(
+        Set<String> cluster,
+        Set<ConfigurableClusterPrivilege> conditionalCluster,
+        Set<Indices> index,
+        Set<RoleDescriptor.ApplicationResourcePrivileges> application,
+        Set<String> runAs,
+        Set<RemoteIndices> remoteIndex
+    ) {
         this.cluster = Collections.unmodifiableSet(cluster);
         this.configurableClusterPrivileges = Collections.unmodifiableSet(conditionalCluster);
         this.index = Collections.unmodifiableSet(index);
         this.application = Collections.unmodifiableSet(application);
         this.runAs = Collections.unmodifiableSet(runAs);
+        this.remoteIndex = Collections.unmodifiableSet(remoteIndex);
     }
 
     public Set<String> getClusterPrivileges() {
@@ -70,12 +83,20 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
         return index;
     }
 
+    public Set<RemoteIndices> getRemoteIndexPrivileges() {
+        return remoteIndex;
+    }
+
     public Set<RoleDescriptor.ApplicationResourcePrivileges> getApplicationPrivileges() {
         return application;
     }
 
     public Set<String> getRunAs() {
         return runAs;
+    }
+
+    public boolean hasRemoteIndicesPrivileges() {
+        return false == remoteIndex.isEmpty();
     }
 
     @Override
@@ -85,6 +106,17 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
         out.writeCollection(index);
         out.writeCollection(application);
         out.writeCollection(runAs, StreamOutput::writeString);
+        if (out.getTransportVersion().onOrAfter(TransportVersion.V_8_8_0)) {
+            out.writeCollection(remoteIndex);
+        } else if (hasRemoteIndicesPrivileges()) {
+            throw new IllegalArgumentException(
+                "versions of Elasticsearch before ["
+                    + TransportVersion.V_8_8_0
+                    + "] can't handle remote indices privileges and attempted to send to ["
+                    + out.getTransportVersion()
+                    + "]"
+            );
+        }
     }
 
     @Override
@@ -96,16 +128,38 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
             return false;
         }
         final GetUserPrivilegesResponse that = (GetUserPrivilegesResponse) other;
-        return Objects.equals(cluster, that.cluster) &&
-            Objects.equals(configurableClusterPrivileges, that.configurableClusterPrivileges) &&
-            Objects.equals(index, that.index) &&
-            Objects.equals(application, that.application) &&
-            Objects.equals(runAs, that.runAs);
+        return Objects.equals(cluster, that.cluster)
+            && Objects.equals(configurableClusterPrivileges, that.configurableClusterPrivileges)
+            && Objects.equals(index, that.index)
+            && Objects.equals(application, that.application)
+            && Objects.equals(runAs, that.runAs)
+            && Objects.equals(remoteIndex, that.remoteIndex);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(cluster, configurableClusterPrivileges, index, application, runAs);
+        return Objects.hash(cluster, configurableClusterPrivileges, index, application, runAs, remoteIndex);
+    }
+
+    public record RemoteIndices(Indices indices, Set<String> remoteClusters) implements ToXContentObject, Writeable {
+
+        public RemoteIndices(StreamInput in) throws IOException {
+            this(new Indices(in), Collections.unmodifiableSet(new TreeSet<>(in.readSet(StreamInput::readString))));
+        }
+
+        @Override
+        public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
+            builder.startObject();
+            indices.innerToXContent(builder);
+            builder.field(RoleDescriptor.Fields.REMOTE_CLUSTERS.getPreferredName(), remoteClusters);
+            return builder.endObject();
+        }
+
+        @Override
+        public void writeTo(StreamOutput out) throws IOException {
+            indices.writeTo(out);
+            out.writeStringCollection(remoteClusters);
+        }
     }
 
     /**
@@ -119,9 +173,13 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
         private final Set<BytesReference> queries;
         private final boolean allowRestrictedIndices;
 
-        public Indices(Collection<String> indices, Collection<String> privileges,
-                Set<FieldPermissionsDefinition.FieldGrantExcludeGroup> fieldSecurity, Set<BytesReference> queries,
-                boolean allowRestrictedIndices) {
+        public Indices(
+            Collection<String> indices,
+            Collection<String> privileges,
+            Set<FieldPermissionsDefinition.FieldGrantExcludeGroup> fieldSecurity,
+            Set<BytesReference> queries,
+            boolean allowRestrictedIndices
+        ) {
             // The use of TreeSet is to provide a consistent order that can be relied upon in tests
             this.indices = Collections.unmodifiableSet(new TreeSet<>(Objects.requireNonNull(indices)));
             this.privileges = Collections.unmodifiableSet(new TreeSet<>(Objects.requireNonNull(privileges)));
@@ -134,12 +192,12 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
             // The use of TreeSet is to provide a consistent order that can be relied upon in tests
             indices = Collections.unmodifiableSet(new TreeSet<>(in.readSet(StreamInput::readString)));
             privileges = Collections.unmodifiableSet(new TreeSet<>(in.readSet(StreamInput::readString)));
-            fieldSecurity = Collections.unmodifiableSet(in.readSet(input -> {
+            fieldSecurity = in.readImmutableSet(input -> {
                 final String[] grant = input.readOptionalStringArray();
                 final String[] exclude = input.readOptionalStringArray();
                 return new FieldPermissionsDefinition.FieldGrantExcludeGroup(grant, exclude);
-            }));
-            queries = Collections.unmodifiableSet(in.readSet(StreamInput::readBytesReference));
+            });
+            queries = in.readImmutableSet(StreamInput::readBytesReference);
             this.allowRestrictedIndices = in.readBoolean();
         }
 
@@ -165,11 +223,13 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
 
         @Override
         public String toString() {
-            StringBuilder sb = new StringBuilder(getClass().getSimpleName())
-                .append("[")
-                .append("indices=[").append(Strings.collectionToCommaDelimitedString(indices))
-                .append("], allow_restricted_indices=[").append(allowRestrictedIndices)
-                .append("], privileges=[").append(Strings.collectionToCommaDelimitedString(privileges))
+            StringBuilder sb = new StringBuilder(getClass().getSimpleName()).append("[")
+                .append("indices=[")
+                .append(Strings.collectionToCommaDelimitedString(indices))
+                .append("], allow_restricted_indices=[")
+                .append(allowRestrictedIndices)
+                .append("], privileges=[")
+                .append(Strings.collectionToCommaDelimitedString(privileges))
                 .append("]");
             if (fieldSecurity.isEmpty() == false) {
                 sb.append(", fls=[").append(Strings.collectionToCommaDelimitedString(fieldSecurity)).append("]");
@@ -205,11 +265,19 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
         @Override
         public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
             builder.startObject();
+            innerToXContent(builder);
+            return builder.endObject();
+        }
+
+        void innerToXContent(XContentBuilder builder) throws IOException {
             builder.field(RoleDescriptor.Fields.NAMES.getPreferredName(), indices);
             builder.field(RoleDescriptor.Fields.PRIVILEGES.getPreferredName(), privileges);
             if (fieldSecurity.stream().anyMatch(g -> nonEmpty(g.getGrantedFields()) || nonEmpty(g.getExcludedFields()))) {
                 builder.startArray(RoleDescriptor.Fields.FIELD_PERMISSIONS.getPreferredName());
-                for (FieldPermissionsDefinition.FieldGrantExcludeGroup group : this.fieldSecurity) {
+                final List<FieldPermissionsDefinition.FieldGrantExcludeGroup> sortedFieldSecurity = this.fieldSecurity.stream()
+                    .sorted()
+                    .toList();
+                for (FieldPermissionsDefinition.FieldGrantExcludeGroup group : sortedFieldSecurity) {
                     builder.startObject();
                     if (nonEmpty(group.getGrantedFields())) {
                         builder.array(RoleDescriptor.Fields.GRANT_FIELDS.getPreferredName(), group.getGrantedFields());
@@ -229,10 +297,9 @@ public final class GetUserPrivilegesResponse extends ActionResponse {
                 builder.endArray();
             }
             builder.field(RoleDescriptor.Fields.ALLOW_RESTRICTED_INDICES.getPreferredName(), allowRestrictedIndices);
-            return builder.endObject();
         }
 
-        private boolean nonEmpty(String[] grantedFields) {
+        private static boolean nonEmpty(String[] grantedFields) {
             return grantedFields != null && grantedFields.length != 0;
         }
 
