@@ -7,12 +7,14 @@
 package org.elasticsearch.xpack.ml;
 
 import org.elasticsearch.Version;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
+import org.elasticsearch.cluster.metadata.ComposableIndexTemplate;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xpack.core.ClientHelper;
+import org.elasticsearch.xpack.core.ilm.LifecyclePolicy;
 import org.elasticsearch.xpack.core.ml.MlStatsIndex;
 import org.elasticsearch.xpack.core.ml.job.persistence.AnomalyDetectorsIndex;
 import org.elasticsearch.xpack.core.ml.job.persistence.AnomalyDetectorsIndexFields;
@@ -21,45 +23,37 @@ import org.elasticsearch.xpack.core.template.IndexTemplateConfig;
 import org.elasticsearch.xpack.core.template.IndexTemplateRegistry;
 import org.elasticsearch.xpack.core.template.LifecyclePolicyConfig;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 public class MlIndexTemplateRegistry extends IndexTemplateRegistry {
 
-    private static final String ROOT_RESOURCE_PATH = "/org/elasticsearch/xpack/core/ml/";
+    private static final String ROOT_RESOURCE_PATH = "/ml/";
     private static final String ANOMALY_DETECTION_PATH = ROOT_RESOURCE_PATH + "anomalydetection/";
     private static final String VERSION_PATTERN = "xpack.ml.version";
     private static final String VERSION_ID_PATTERN = "xpack.ml.version.id";
     private static final String INDEX_LIFECYCLE_NAME = "xpack.ml.index.lifecycle.name";
     private static final String INDEX_LIFECYCLE_ROLLOVER_ALIAS = "xpack.ml.index.lifecycle.rollover_alias";
 
-    private static final IndexTemplateConfig ANOMALY_DETECTION_RESULTS_TEMPLATE = anomalyDetectionResultsTemplate();
-
-    private static final IndexTemplateConfig ANOMALY_DETECTION_STATE_TEMPLATE = stateTemplate();
-
-    public static final IndexTemplateConfig NOTIFICATIONS_TEMPLATE = new IndexTemplateConfig(NotificationsIndex.NOTIFICATIONS_INDEX,
-        ROOT_RESOURCE_PATH + "notifications_index_template.json", Version.CURRENT.id, VERSION_PATTERN,
-        Collections.singletonMap(VERSION_ID_PATTERN, String.valueOf(Version.CURRENT.id)));
-
-    private static final IndexTemplateConfig STATS_TEMPLATE = statsTemplate();
+    public static final IndexTemplateConfig NOTIFICATIONS_TEMPLATE = notificationsTemplate();
 
     private static final String ML_SIZE_BASED_ILM_POLICY_NAME = "ml-size-based-ilm-policy";
-    private static final LifecyclePolicyConfig ML_SIZE_BASED_ILM_POLICY =
-        new LifecyclePolicyConfig(ML_SIZE_BASED_ILM_POLICY_NAME, ROOT_RESOURCE_PATH + "size_based_ilm_policy.json");
 
-    private static IndexTemplateConfig stateTemplate() {
+    private IndexTemplateConfig stateTemplate() {
         Map<String, String> variables = new HashMap<>();
         variables.put(VERSION_ID_PATTERN, String.valueOf(Version.CURRENT.id));
+        // In serverless a different version of "state_index_template.json" is shipped that won't substitute the ILM policy variable
         variables.put(INDEX_LIFECYCLE_NAME, ML_SIZE_BASED_ILM_POLICY_NAME);
         variables.put(INDEX_LIFECYCLE_ROLLOVER_ALIAS, AnomalyDetectorsIndex.jobStateIndexWriteAlias());
 
-        return new IndexTemplateConfig(AnomalyDetectorsIndexFields.STATE_INDEX_PREFIX,
+        return new IndexTemplateConfig(
+            AnomalyDetectorsIndexFields.STATE_INDEX_PREFIX,
             ANOMALY_DETECTION_PATH + "state_index_template.json",
-            Version.CURRENT.id, VERSION_PATTERN,
-            variables);
+            Version.CURRENT.id,
+            VERSION_PATTERN,
+            variables
+        );
     }
 
     private static IndexTemplateConfig anomalyDetectionResultsTemplate() {
@@ -67,35 +61,64 @@ public class MlIndexTemplateRegistry extends IndexTemplateRegistry {
         variables.put(VERSION_ID_PATTERN, String.valueOf(Version.CURRENT.id));
         variables.put("xpack.ml.anomalydetection.results.mappings", AnomalyDetectorsIndex.resultsMapping());
 
-        return new IndexTemplateConfig(AnomalyDetectorsIndex.jobResultsIndexPrefix(),
+        return new IndexTemplateConfig(
+            AnomalyDetectorsIndex.jobResultsIndexPrefix(),
             ANOMALY_DETECTION_PATH + "results_index_template.json",
-            Version.CURRENT.id, VERSION_PATTERN,
-            variables);
+            Version.CURRENT.id,
+            VERSION_PATTERN,
+            variables
+        );
     }
 
-    private static IndexTemplateConfig statsTemplate() {
+    private static IndexTemplateConfig notificationsTemplate() {
+        Map<String, String> variables = new HashMap<>();
+        variables.put(VERSION_ID_PATTERN, String.valueOf(Version.CURRENT.id));
+        variables.put("xpack.ml.notifications.mappings", NotificationsIndex.mapping());
+
+        return new IndexTemplateConfig(
+            NotificationsIndex.NOTIFICATIONS_INDEX,
+            ROOT_RESOURCE_PATH + "notifications_index_template.json",
+            Version.CURRENT.id,
+            VERSION_PATTERN,
+            variables
+        );
+    }
+
+    private IndexTemplateConfig statsTemplate() {
         Map<String, String> variables = new HashMap<>();
         variables.put(VERSION_ID_PATTERN, String.valueOf(Version.CURRENT.id));
         variables.put("xpack.ml.stats.mappings", MlStatsIndex.mapping());
+        // In serverless a different version of "stats_index_template.json" is shipped that won't substitute the ILM policy variable
         variables.put(INDEX_LIFECYCLE_NAME, ML_SIZE_BASED_ILM_POLICY_NAME);
         variables.put(INDEX_LIFECYCLE_ROLLOVER_ALIAS, MlStatsIndex.writeAlias());
 
-        return new IndexTemplateConfig(MlStatsIndex.TEMPLATE_NAME,
+        return new IndexTemplateConfig(
+            MlStatsIndex.TEMPLATE_NAME,
             ROOT_RESOURCE_PATH + "stats_index_template.json",
-            Version.CURRENT.id, VERSION_PATTERN,
-            variables);
+            Version.CURRENT.id,
+            VERSION_PATTERN,
+            variables
+        );
     }
 
-    private final List<IndexTemplateConfig> templatesToUse;
+    private final boolean useIlm;
 
-    public MlIndexTemplateRegistry(Settings nodeSettings, ClusterService clusterService, ThreadPool threadPool, Client client,
-                                   NamedXContentRegistry xContentRegistry) {
+    public MlIndexTemplateRegistry(
+        Settings nodeSettings,
+        ClusterService clusterService,
+        ThreadPool threadPool,
+        Client client,
+        boolean useIlm,
+        NamedXContentRegistry xContentRegistry
+    ) {
         super(nodeSettings, clusterService, threadPool, client, xContentRegistry);
-        templatesToUse = Arrays.asList(
-            ANOMALY_DETECTION_RESULTS_TEMPLATE,
-            ANOMALY_DETECTION_STATE_TEMPLATE,
+        this.useIlm = useIlm;
+        this.composableIndexTemplateConfigs = parseComposableTemplates(
+            anomalyDetectionResultsTemplate(),
+            stateTemplate(),
             NOTIFICATIONS_TEMPLATE,
-            STATS_TEMPLATE);
+            statsTemplate()
+        );
     }
 
     @Override
@@ -103,14 +126,29 @@ public class MlIndexTemplateRegistry extends IndexTemplateRegistry {
         return true;
     }
 
+    private final Map<String, ComposableIndexTemplate> composableIndexTemplateConfigs;
+
     @Override
-    protected List<IndexTemplateConfig> getLegacyTemplateConfigs() {
-        return templatesToUse;
+    protected Map<String, ComposableIndexTemplate> getComposableTemplateConfigs() {
+        return composableIndexTemplateConfigs;
+    }
+
+    private static final LifecyclePolicyConfig LIFECYCLE_POLICY_CONFIG = new LifecyclePolicyConfig(
+        ML_SIZE_BASED_ILM_POLICY_NAME,
+        ROOT_RESOURCE_PATH + "size_based_ilm_policy.json"
+    );
+
+    @Override
+    protected List<LifecyclePolicyConfig> getLifecycleConfigs() {
+        return List.of(LIFECYCLE_POLICY_CONFIG);
     }
 
     @Override
-    protected List<LifecyclePolicyConfig> getPolicyConfigs() {
-        return Collections.singletonList(ML_SIZE_BASED_ILM_POLICY);
+    protected List<LifecyclePolicy> getLifecyclePolicies() {
+        if (useIlm == false) {
+            return List.of();
+        }
+        return lifecyclePolicies;
     }
 
     @Override
