@@ -15,16 +15,22 @@ import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.FailedNodeException;
 import org.elasticsearch.action.TaskOperationFailure;
 import org.elasticsearch.action.support.ActionFilters;
+import org.elasticsearch.action.support.tasks.BaseTasksResponse;
 import org.elasticsearch.action.support.tasks.TransportTasksAction;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
+import org.elasticsearch.client.internal.ParentTaskAssigningClient;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.Nullable;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.inject.Inject;
+import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata;
+import org.elasticsearch.persistent.PersistentTasksCustomMetadata.Assignment;
+import org.elasticsearch.tasks.CancellableTask;
 import org.elasticsearch.tasks.Task;
+import org.elasticsearch.tasks.TaskId;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xpack.core.transform.action.GetTransformStatsAction;
@@ -38,6 +44,9 @@ import org.elasticsearch.xpack.core.transform.transforms.TransformStoredDoc;
 import org.elasticsearch.xpack.transform.TransformServices;
 import org.elasticsearch.xpack.transform.checkpoint.TransformCheckpointService;
 import org.elasticsearch.xpack.transform.persistence.TransformConfigManager;
+import org.elasticsearch.xpack.transform.transforms.TransformHealthChecker;
+import org.elasticsearch.xpack.transform.transforms.TransformNodeAssignments;
+import org.elasticsearch.xpack.transform.transforms.TransformNodes;
 import org.elasticsearch.xpack.transform.transforms.TransformTask;
 
 import java.util.ArrayList;
@@ -57,6 +66,7 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
     private final TransformConfigManager transformConfigManager;
     private final TransformCheckpointService transformCheckpointService;
     private final Client client;
+    private final Settings nodeSettings;
 
     @Inject
     public TransportGetTransformStatsAction(
@@ -64,23 +74,23 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
         ActionFilters actionFilters,
         ClusterService clusterService,
         TransformServices transformServices,
-        Client client
+        Client client,
+        Settings settings
     ) {
-        this(GetTransformStatsAction.NAME, transportService, actionFilters, clusterService, transformServices, client);
-    }
-
-    protected TransportGetTransformStatsAction(
-        String name,
-        TransportService transportService,
-        ActionFilters actionFilters,
-        ClusterService clusterService,
-        TransformServices transformServices,
-        Client client
-    ) {
-        super(name, clusterService, transportService, actionFilters, Request::new, Response::new, Response::new, ThreadPool.Names.SAME);
+        super(
+            GetTransformStatsAction.NAME,
+            clusterService,
+            transportService,
+            actionFilters,
+            Request::new,
+            Response::new,
+            Response::new,
+            ThreadPool.Names.SAME
+        );
         this.transformConfigManager = transformServices.getConfigManager();
         this.transformCheckpointService = transformServices.getCheckpointService();
         this.client = client;
+        this.nodeSettings = settings;
     }
 
     @Override
@@ -93,14 +103,14 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
         List<TransformStats> responses = tasks.stream()
             .flatMap(r -> r.getTransformsStats().stream())
             .sorted(Comparator.comparing(TransformStats::getId))
-            .collect(Collectors.toList());
+            .toList();
         List<ElasticsearchException> allFailedNodeExceptions = new ArrayList<>(failedNodeExceptions);
-        allFailedNodeExceptions.addAll(tasks.stream().flatMap(r -> r.getNodeFailures().stream()).collect(Collectors.toList()));
+        tasks.stream().map(BaseTasksResponse::getNodeFailures).forEach(allFailedNodeExceptions::addAll);
         return new Response(responses, responses.size(), taskOperationFailures, allFailedNodeExceptions);
     }
 
     @Override
-    protected void taskOperation(Request request, TransformTask task, ActionListener<Response> listener) {
+    protected void taskOperation(CancellableTask actionTask, Request request, TransformTask task, ActionListener<Response> listener) {
         // Little extra insurance, make sure we only return transforms that aren't cancelled
         ClusterState state = clusterService.state();
         String nodeId = state.nodes().getLocalNode().getId();
@@ -108,9 +118,7 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             task.getCheckpointingInfo(
                 transformCheckpointService,
                 ActionListener.wrap(
-                    checkpointingInfo -> listener.onResponse(
-                        new Response(Collections.singletonList(deriveStats(task, checkpointingInfo)), 1L)
-                    ),
+                    checkpointingInfo -> listener.onResponse(new Response(Collections.singletonList(deriveStats(task, checkpointingInfo)))),
                     e -> {
                         logger.warn("Failed to retrieve checkpointing info for transform [" + task.getTransformId() + "]", e);
                         listener.onResponse(
@@ -125,31 +133,57 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
                 )
             );
         } else {
-            listener.onResponse(new Response(Collections.emptyList(), 0L));
+            listener.onResponse(new Response(Collections.emptyList()));
         }
     }
 
     @Override
     protected void doExecute(Task task, Request request, ActionListener<Response> finalListener) {
+        TaskId parentTaskId = new TaskId(clusterService.localNode().getId(), task.getId());
+
+        final ClusterState clusterState = clusterService.state();
+        TransformNodes.warnIfNoTransformNodes(clusterState);
+
         transformConfigManager.expandTransformIds(
             request.getId(),
             request.getPageParams(),
+            request.getTimeout(),
             request.isAllowNoMatch(),
             ActionListener.wrap(hitsAndIds -> {
-                request.setExpandedIds(hitsAndIds.v2());
-                final ClusterState state = clusterService.state();
-                TransformNodeAssignments transformNodeAssignments = TransformNodes.transformTaskNodes(hitsAndIds.v2(), state);
-                // TODO: if empty the request is send to all nodes(benign but superfluous)
-                request.setNodes(transformNodeAssignments.getExecutorNodes().toArray(new String[0]));
-                super.doExecute(task, request, ActionListener.wrap(response -> {
-                    PersistentTasksCustomMetadata tasksInProgress = state.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
+                boolean hasAnyTransformNode = TransformNodes.hasAnyTransformNode(clusterState.getNodes());
+                boolean requiresRemote = hitsAndIds.v2().v2().stream().anyMatch(config -> config.getSource().requiresRemoteCluster());
+                if (hasAnyTransformNode
+                    && TransformNodes.redirectToAnotherNodeIfNeeded(
+                        clusterState,
+                        nodeSettings,
+                        requiresRemote,
+                        transportService,
+                        actionName,
+                        request,
+                        Response::new,
+                        finalListener
+                    )) {
+                    return;
+                }
+
+                request.setExpandedIds(hitsAndIds.v2().v1());
+                final TransformNodeAssignments transformNodeAssignments = TransformNodes.transformTaskNodes(
+                    hitsAndIds.v2().v1(),
+                    clusterState
+                );
+
+                ActionListener<Response> doExecuteListener = ActionListener.wrap(response -> {
+                    PersistentTasksCustomMetadata tasksInProgress = clusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
                     if (tasksInProgress != null) {
                         // Mutates underlying state object with the assigned node attributes
-                        response.getTransformsStats().forEach(dtsasi -> setNodeAttributes(dtsasi, tasksInProgress, state));
+                        response.getTransformsStats().forEach(dtsasi -> setNodeAttributes(dtsasi, tasksInProgress, clusterState));
                     }
                     collectStatsForTransformsWithoutTasks(
+                        parentTaskId,
                         request,
                         response,
+                        transformNodeAssignments.getWaitingForAssignment(),
+                        clusterState,
                         ActionListener.wrap(
                             finalResponse -> finalListener.onResponse(
                                 new Response(
@@ -162,17 +196,22 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
                             finalListener::onFailure
                         )
                     );
-                }, finalListener::onFailure));
-            },
-                e -> {
-                    // If the index to search, or the individual config is not there, just return empty
-                    if (e instanceof ResourceNotFoundException) {
-                        finalListener.onResponse(new Response(Collections.emptyList(), 0L));
-                    } else {
-                        finalListener.onFailure(e);
-                    }
+                }, finalListener::onFailure);
+
+                if (transformNodeAssignments.getExecutorNodes().size() > 0) {
+                    request.setNodes(transformNodeAssignments.getExecutorNodes().toArray(new String[0]));
+                    super.doExecute(task, request, doExecuteListener);
+                } else {
+                    doExecuteListener.onResponse(new Response(Collections.emptyList()));
                 }
-            )
+            }, e -> {
+                // If the index to search, or the individual config is not there, just return empty
+                if (e instanceof ResourceNotFoundException) {
+                    finalListener.onResponse(new Response(Collections.emptyList()));
+                } else {
+                    finalListener.onFailure(e);
+                }
+            })
         );
     }
 
@@ -206,18 +245,26 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             reason,
             null,
             task.getStats(),
-            checkpointingInfo == null ? TransformCheckpointingInfo.EMPTY : checkpointingInfo
+            checkpointingInfo == null ? TransformCheckpointingInfo.EMPTY : checkpointingInfo,
+            TransformHealthChecker.checkTransform(task, transformState.getAuthState())
         );
     }
 
-    private void collectStatsForTransformsWithoutTasks(Request request, Response response, ActionListener<Response> listener) {
+    private void collectStatsForTransformsWithoutTasks(
+        TaskId parentTaskId,
+        Request request,
+        Response response,
+        Set<String> transformsWaitingForAssignment,
+        ClusterState clusterState,
+        ActionListener<Response> listener
+    ) {
         // We gathered all there is, no need to continue
         if (request.getExpandedIds().size() == response.getTransformsStats().size()) {
             listener.onResponse(response);
             return;
         }
         Set<String> transformsWithoutTasks = new HashSet<>(request.getExpandedIds());
-        transformsWithoutTasks.removeAll(response.getTransformsStats().stream().map(TransformStats::getId).collect(Collectors.toList()));
+        response.getTransformsStats().stream().map(TransformStats::getId).forEach(transformsWithoutTasks::remove);
 
         // Small assurance that we are at least below the max. Terms search has a hard limit of 10k, we should at least be below that.
         assert transformsWithoutTasks.size() <= Request.MAX_SIZE_RETURN;
@@ -226,23 +273,31 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
         // There is a potential race condition where the saved document does not actually have a STOPPED state
         // as the task is cancelled before we persist state.
         ActionListener<List<TransformStoredDoc>> searchStatsListener = ActionListener.wrap(statsForTransformsWithoutTasks -> {
-            List<TransformStats> allStateAndStats = response.getTransformsStats();
-            addCheckpointingInfoForTransformsWithoutTasks(allStateAndStats, statsForTransformsWithoutTasks, ActionListener.wrap(aVoid -> {
-                transformsWithoutTasks.removeAll(
-                    statsForTransformsWithoutTasks.stream().map(TransformStoredDoc::getId).collect(Collectors.toSet())
-                );
+            // copy the list as it might be immutable
+            List<TransformStats> allStateAndStats = new ArrayList<>(response.getTransformsStats());
+            addCheckpointingInfoForTransformsWithoutTasks(
+                parentTaskId,
+                allStateAndStats,
+                statsForTransformsWithoutTasks,
+                transformsWaitingForAssignment,
+                clusterState,
+                ActionListener.wrap(aVoid -> {
+                    transformsWithoutTasks.removeAll(
+                        statsForTransformsWithoutTasks.stream().map(TransformStoredDoc::getId).collect(Collectors.toSet())
+                    );
 
-                // Transforms that have not been started and have no state or stats.
-                transformsWithoutTasks.forEach(transformId -> allStateAndStats.add(TransformStats.initialStats(transformId)));
+                    // Transforms that have not been started and have no state or stats.
+                    transformsWithoutTasks.forEach(transformId -> allStateAndStats.add(TransformStats.initialStats(transformId)));
 
-                // Any transform in collection could NOT have a task, so, even though the list is initially sorted
-                // it can easily become arbitrarily ordered based on which transforms don't have a task or stats docs
-                allStateAndStats.sort(Comparator.comparing(TransformStats::getId));
+                    // Any transform in collection could NOT have a task, so, even though the list is initially sorted
+                    // it can easily become arbitrarily ordered based on which transforms don't have a task or stats docs
+                    allStateAndStats.sort(Comparator.comparing(TransformStats::getId));
 
-                listener.onResponse(
-                    new Response(allStateAndStats, allStateAndStats.size(), response.getTaskFailures(), response.getNodeFailures())
-                );
-            }, listener::onFailure));
+                    listener.onResponse(
+                        new Response(allStateAndStats, allStateAndStats.size(), response.getTaskFailures(), response.getNodeFailures())
+                    );
+                }, listener::onFailure)
+            );
         }, e -> {
             if (e instanceof IndexNotFoundException) {
                 listener.onResponse(response);
@@ -251,12 +306,16 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             }
         });
 
-        transformConfigManager.getTransformStoredDocs(transformsWithoutTasks, searchStatsListener);
+        transformConfigManager.getTransformStoredDocs(transformsWithoutTasks, request.getTimeout(), searchStatsListener);
     }
 
-    private void populateSingleStoppedTransformStat(TransformStoredDoc transform, ActionListener<TransformCheckpointingInfo> listener) {
+    private void populateSingleStoppedTransformStat(
+        TransformStoredDoc transform,
+        TaskId parentTaskId,
+        ActionListener<TransformCheckpointingInfo> listener
+    ) {
         transformCheckpointService.getCheckpointingInfo(
-            client,
+            new ParentTaskAssigningClient(client, parentTaskId),
             transform.getId(),
             transform.getTransformState().getCheckpoint(),
             transform.getTransformState().getPosition(),
@@ -269,11 +328,13 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
     }
 
     private void addCheckpointingInfoForTransformsWithoutTasks(
+        TaskId parentTaskId,
         List<TransformStats> allStateAndStats,
         List<TransformStoredDoc> statsForTransformsWithoutTasks,
+        Set<String> transformsWaitingForAssignment,
+        ClusterState clusterState,
         ActionListener<Void> listener
     ) {
-
         if (statsForTransformsWithoutTasks.isEmpty()) {
             // No work to do, but we must respond to the listener
             listener.onResponse(null);
@@ -283,19 +344,52 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
         AtomicInteger numberRemaining = new AtomicInteger(statsForTransformsWithoutTasks.size());
         AtomicBoolean isExceptionReported = new AtomicBoolean(false);
 
-        statsForTransformsWithoutTasks.forEach(stat -> populateSingleStoppedTransformStat(stat, ActionListener.wrap(checkpointingInfo -> {
-            synchronized (allStateAndStats) {
-                allStateAndStats.add(
-                    new TransformStats(stat.getId(), TransformStats.State.STOPPED, null, null, stat.getTransformStats(), checkpointingInfo)
-                );
-            }
-            if (numberRemaining.decrementAndGet() == 0) {
-                listener.onResponse(null);
-            }
-        }, e -> {
-            if (isExceptionReported.compareAndSet(false, true)) {
-                listener.onFailure(e);
-            }
-        })));
+        statsForTransformsWithoutTasks.forEach(
+            stat -> populateSingleStoppedTransformStat(stat, parentTaskId, ActionListener.wrap(checkpointingInfo -> {
+                synchronized (allStateAndStats) {
+                    if (transformsWaitingForAssignment.contains(stat.getId())) {
+                        Assignment assignment = TransformNodes.getAssignment(stat.getId(), clusterState);
+                        allStateAndStats.add(
+                            new TransformStats(
+                                stat.getId(),
+                                TransformStats.State.WAITING,
+                                assignment.getExplanation(),
+                                null,
+                                stat.getTransformStats(),
+                                checkpointingInfo,
+                                TransformHealthChecker.checkUnassignedTransform(
+                                    stat.getId(),
+                                    clusterState,
+                                    stat.getTransformState().getAuthState()
+                                )
+                            )
+                        );
+                    } else {
+                        final boolean transformPersistentTaskIsStillRunning = TransformTask.getTransformTask(
+                            stat.getId(),
+                            clusterState
+                        ) != null;
+                        allStateAndStats.add(
+                            new TransformStats(
+                                stat.getId(),
+                                transformPersistentTaskIsStillRunning ? TransformStats.State.STOPPING : TransformStats.State.STOPPED,
+                                null,
+                                null,
+                                stat.getTransformStats(),
+                                checkpointingInfo,
+                                TransformHealthChecker.checkTransform(stat.getTransformState().getAuthState())
+                            )
+                        );
+                    }
+                }
+                if (numberRemaining.decrementAndGet() == 0) {
+                    listener.onResponse(null);
+                }
+            }, e -> {
+                if (isExceptionReported.compareAndSet(false, true)) {
+                    listener.onFailure(e);
+                }
+            }))
+        );
     }
 }
